--- a/documentation/content/en/articles/contributing/_index.adoc
+++ b/documentation/content/en/articles/contributing/_index.adoc
@@ -150,9 +150,9 @@ There are a number of easy ways you can contribute to keeping the ports tree up 
 
 * Find some cool or useful software and extref:{porters-handbook}[create a port] for it.
 * There are a large number of ports that have no maintainer.
-Become a maintainer and <<adopt-port>>.
-* If you have created or adopted a port, be aware of <<maintain-port>>.
-* When you are looking for a quick challenge you could <<fix-broken>>.
+Become a maintainer and crossref:contributing[adopt-port].
+* If you have created or adopted a port, be aware of crossref:contributing[maintain-port].
+* When you are looking for a quick challenge you could crossref:contributing[fix-broken].
 
 === Pick one of the items from the Ideas page
 
@@ -196,7 +196,8 @@ Please avoid creating large, wide-ranging cleanup patches: they are too large an
 Misdirected patches may be redirected to a more appropriate forum for the patch to be resolved.
 
 Pull requests submitted to the ports repository may or may not see action, based on the whims of developers.
-For now, you will have a better experience if you follow the ports submission process <<ports-contributing>>.
+For now, you will have a better experience if you follow the ports submission
+process crossref:contributing[ports-contributing].
 
 The docs team also accepts pull requests via GitHub, but has not established any policy for them yet.
 
@@ -332,7 +333,7 @@ We expect you to be able to recognize such ports by looking through other ports'
 
 ==== How to adopt the port
 
-First make sure you understand your <<maintain-port>>.
+First make sure you understand your crossref:contributing[maintain-port].
 Also read the extref:{porters-handbook}[Porter's Handbook].
 _Please do not commit yourself to more than you feel you can comfortably handle._
 
@@ -414,11 +415,11 @@ Thoroughly review and test your changes:
 It is common for a port to work on one branch or platform and fail on another.
 ** Make sure your port's dependencies are complete.
 The recommended way of doing this is by installing your own ports tinderbox.
-See <<resources>> for more information.
+See crossref:contributing[resources] for more information.
 ** Check that the packing list is up to date.
 This involves adding in any new files and directories and removing unused entries.
 ** Verify your port using man:portlint[1] as a guide.
-See <<resources>> for important information about using portlint.
+See crossref:contributing[resources] for important information about using portlint.
 ** Consider whether changes to your port might cause any other ports to break.
 If this is the case, coordinate the changes with the maintainers of those ports.
 This is especially important if your update changes the shared library version; in this case, at the very least, the dependent ports will need to get a `PORTREVISION` bump so that they will automatically be upgraded by automated tools such as package:ports-mgmt/poudriere[].
