--- a/documentation/content/en/articles/contributors/_index.adoc
+++ b/documentation/content/en/articles/contributors/_index.adoc
@@ -61,7 +61,8 @@ endif::[]
 Abstract
 
 This article lists individuals and organizations who have made a contribution to FreeBSD.
-To see the current list of FreeBSD Committers you can take a look at the following <<staff-committers, list>>.
+To see the current list of FreeBSD Committers you can take a look at the
+following crossref:contributors[staff-committers, list].
 
 '''
 
