--- a/documentation/content/en/articles/gjournal-desktop/_index.adoc
+++ b/documentation/content/en/articles/gjournal-desktop/_index.adoc
@@ -385,7 +385,7 @@ The following section covers frequently asked questions regarding problems relat
 The journal probably fills up before it has a chance to get committed (flushed) to disk.
 Keep in mind the size of the journal depends on the usage load, and not the size of the data provider.
 If your disk activity is high, you need a larger partition for the journal.
-See the note in the <<understanding-journaling>> section.
+See the note in the crossref:gjournal-desktop[understanding-journaling] section.
 
 === I made some mistake during configuration, and I cannot boot normally now. Can this be fixed some way?
 
