--- a/documentation/content/en/articles/ldap-auth/_index.adoc
+++ b/documentation/content/en/articles/ldap-auth/_index.adoc
@@ -187,7 +187,8 @@ Getting Private key
 ====
 
 This will create a self-signed certificate that can be used for the directives in [.filename]#slapd.conf#, where [.filename]#cert.crt# and [.filename]#cacert.crt# are the same file.
-If you are going to use many OpenLDAP servers (for replication via `slurpd`) you will want to see <<ssl-ca>> to generate a CA key and use it to sign individual server certificates.
+If you are going to use many OpenLDAP servers (for replication via `slurpd`) you
+will want to see crossref:ldap-auth[ssl-ca] to generate a CA key and use it to sign individual server certificates.
 
 Once this is done, put the following in [.filename]#/etc/rc.conf#:
 
@@ -317,7 +318,8 @@ If it does, your database is properly configured to be used as an LDAP authentic
 [[client]]
 == Client Configuration
 
-The client should already have OpenLDAP libraries from <<ldap-connect-client>>, but if you are installing several client machines you will need to install package:net/openldap26-client[] on each of them.
+The client should already have OpenLDAP libraries from
+crossref:ldap-auth[ldap-connect-client], but if you are installing several client machines you will need to install package:net/openldap26-client[] on each of them.
 
 FreeBSD requires two ports to be installed to authenticate against an LDAP server, package:security/pam_ldap[] and package:net/nss_ldap[].
 
@@ -491,7 +493,8 @@ Congratulations! You should now have working LDAP authentication.
 Unfortunately, as of the time this was written FreeBSD did not support changing user passwords with man:passwd[1].
 As a result of this, most administrators are left to implement a solution themselves.
 I provide some examples here.
-Note that if you write your own password change script, there are some security issues you should be made aware of; see <<security-passwd>>
+Note that if you write your own password change script, there are some security
+issues you should be made aware of; see crossref:ldap-auth[security-passwd]
 
 [[chpw-shell]]
 .Shell Script for Changing Passwords
