--- a/documentation/content/en/articles/license-guide/_index.adoc
+++ b/documentation/content/en/articles/license-guide/_index.adoc
@@ -248,13 +248,13 @@ In these cases, the license contained in the file governs.
 Some files in the FreeBSD software collection contain a copyright statement, an SPDX-License-Identifier tag and an explicit license.
 The explicit license takes precedence over the SPDX-License-Identifier tag.
 The SPDX-License-Identifier tag is the project's best effort attempt to characterize the license, but is only informative for automated tools.
-See <<expressions,SPDX-License-Identifier Expressions>> for how to interpret the expression.
+See crossref:license-guide[expressions,SPDX-License-Identifier Expressions] for how to interpret the expression.
 
 === Only Copyright and SPDX-License-Identifier expression.
 
 Some files in the tree contain detached licenses.
 These files contain only a copyright notice and an SPDX-License-Identifier expression, but no explicit license.
-See <<expressions,SPDX-License-Identifier Expressions>> for how to interpret the expression.
+See crossref:license-guide[expressions,SPDX-License-Identifier Expressions] for how to interpret the expression.
 Note: the expressions allowed for detached licenses by the project are a subset of the expressions used informationally or that are defined by the standard.
 
 The license for files containing only the SPDX-License-Identifier should be construed to be
