--- a/documentation/content/en/articles/releng/_index.adoc
+++ b/documentation/content/en/articles/releng/_index.adoc
@@ -105,19 +105,19 @@ In addition to source updates via Subversion, binary patchkits are available to 
 
 The following sections of this article describe:
 
-<<release-proc>>::
+crossref:releng[release-proc]::
 The different phases of the release engineering process leading up to the actual system build.
 
-<<release-build>>::
+crossref:releng[release-build]::
 The actual build process.
 
-<<extensibility>>::
+crossref:releng[extensibility]::
 How the base release may be extended by third parties.
 
-<<lessons-learned>>::
+crossref:releng[lessons-learned]::
 Some of the lessons learned through the release of FreeBSD 4.4.
 
-<<future>>::
+crossref:releng[future]::
 Future directions of development.
 
 [[release-proc]]
