--- a/documentation/content/en/articles/solid-state/_index.adoc
+++ b/documentation/content/en/articles/solid-state/_index.adoc
@@ -108,7 +108,7 @@ varsize=8192
 Remember that this value is in sectors by default.
 
 The fact that [.filename]#/var# is a read-write filesystem is an important distinction, as the [.filename]#/# partition (and any other partitions you may have on your flash media) should be mounted read-only.
-Remember that in <<intro>> we detailed the limitations of flash memory - specifically the limited write capability.
+Remember that in crossref:solid-state[intro] we detailed the limitations of flash memory - specifically the limited write capability.
 The importance of not mounting filesystems on flash media read-write, and the importance of not using a swap file, cannot be overstated.
 A swap file on a busy system can burn through a piece of flash media in less than one year.
 Heavy logging or temporary file creation and destruction can do the same.
@@ -122,7 +122,9 @@ Therefore, in addition to removing the `swap` entry from your [.filename]#/etc/f
 
 A few applications in the average system will immediately begin to fail as a result of this change.
 For instance, cron will not run properly as a result of missing cron tabs in the [.filename]#/var# created by [.filename]#/etc/rc.d/var#, and syslog and dhcp will encounter problems as well as a result of the read-only filesystem and missing items in the [.filename]#/var# that [.filename]#/etc/rc.d/var# has created.
-These are only temporary problems though, and are addressed, along with solutions to the execution of other common software packages in <<strategies>>.
+These are only temporary problems though, and are addressed, along with
+solutions to the execution of other common software packages in
+crossref:solid-state[strategies].
 
 An important thing to remember is that a filesystem that was mounted read-only with [.filename]#/etc/fstab# can be made read-write at any time by issuing the command:
 
@@ -242,7 +244,7 @@ Assuming that you configured your filesystem correctly when it was built on the 
 [[strategies]]
 == System Strategies for Small and Read Only Environments
 
-In <<ro-fs>>, it was pointed out that the [.filename]#/var# filesystem constructed by [.filename]#/etc/rc.d/var# and the presence of a read-only root filesystem causes problems with many common software packages used with FreeBSD.
+In crossref:solid-state[ro-fs], it was pointed out that the [.filename]#/var# filesystem constructed by [.filename]#/etc/rc.d/var# and the presence of a read-only root filesystem causes problems with many common software packages used with FreeBSD.
 In this article, suggestions for successfully running cron, syslog, ports installations, and the Apache web server will be provided.
 
 === Cron
@@ -269,7 +271,8 @@ Therefore, somewhere in [.filename]#/etc/rc.d/var#, after the section that creat
 === Ports Installation
 
 Before discussing the changes necessary to successfully use the ports tree, a reminder is necessary regarding the read-only nature of your filesystems on the flash media.
-Since they are read-only, you will need to temporarily mount them read-write using the mount syntax shown in <<ro-fs>>.
+Since they are read-only, you will need to temporarily mount them read-write
+using the mount syntax shown in crossref:solid-state[ro-fs].
 You should always remount those filesystems read-only when you are done with any maintenance - unnecessary writes to the flash media could considerably shorten its lifespan.
 
 To make it possible to enter a ports directory and successfully run `make install`, we must create a packages directory on a non-memory filesystem that will keep track of our packages across reboots.
