--- a/documentation/content/en/articles/vinum/_index.adoc
+++ b/documentation/content/en/articles/vinum/_index.adoc
@@ -106,7 +106,7 @@ The most obvious method is to divide the virtual disk into groups of consecutive
 This method is called _concatenation_ and has the advantage that the disks are not required to have any specific size relationships.
 It works well when the access to the virtual disk is spread evenly about its address space.
 When access is concentrated on a smaller area, the improvement is less marked.
-<<vinum-concat, Concatenated Organization>> illustrates the sequence in which storage units are allocated in a concatenated organization.
+crossref:vinum[vinum-concat, Concatenated Organization] illustrates the sequence in which storage units are allocated in a concatenated organization.
 
 [[vinum-concat]]
 .Concatenated Organization
@@ -119,7 +119,7 @@ This mapping is called _striping_ or RAID-0.
 
 `RAID` offers various forms of fault tolerance, though RAID-0 is somewhat misleading as it provides no redundancy.
 Striping requires somewhat more effort to locate the data, and it can cause additional I/O load where a transfer is spread over multiple disks, but it can also provide a more constant load across the disks.
-<<vinum-striped, Striped Organization>> illustrates the sequence in which storage units are allocated in a striped organization.
+crossref:vinum[vinum-striped, Striped Organization] illustrates the sequence in which storage units are allocated in a striped organization.
 
 [[vinum-striped]]
 .Striped Organization
@@ -188,7 +188,7 @@ As long as at least one plex can provide the data for the complete address range
 * A _concatenated plex_ uses the address space of each subdisk in turn. Concatenated plexes are the most flexible as they can contain any number of subdisks, and the subdisks may be of different length. The plex may be extended by adding additional subdisks. They require less CPU time than striped plexes, though the difference in CPU overhead is not measurable. On the other hand, they are most susceptible to hot spots, where one disk is very active and others are idle.
 * A _striped plex_ stripes the data across each subdisk. The subdisks must all be the same size and there must be at least two subdisks to distinguish it from a concatenated plex. The greatest advantage of striped plexes is that they reduce hot spots. By choosing an optimum sized stripe, about 256 kB, the load can be evened out on the component drives. Extending a plex by adding new subdisks is so complicated that [.filename]#vinum# does not implement it.
 
-<<vinum-comparison, [.filename]#vinum# Plex Organizations>> summarizes the advantages and disadvantages of each plex organization.
+crossref:vinum[vinum-comparison, [.filename]#vinum# Plex Organizations] summarizes the advantages and disadvantages of each plex organization.
 
 [[vinum-comparison]]
 .[.filename]#vinum# Plex Organizations
@@ -263,7 +263,7 @@ Subdisks:       1 (16 configured)
 ....
 
 This output shows the brief listing format of man:gvinum[8].
-It is represented graphically in <<vinum-simple-vol, A Simple [.filename]#vinum# Volume>>.
+It is represented graphically in crossref:vinum[vinum-simple-vol, A Simple [.filename]#vinum# Volume].
 
 [[vinum-simple-vol]]
 .A Simple [.filename]#vinum# Volume
@@ -319,7 +319,7 @@ After processing this definition, the configuration looks like:
 	S mirror.p1.s0          State: empty    PO:        0  B Size:        512 MB
 ....
 
-<<vinum-mirrored-vol, A Mirrored [.filename]#vinum# Volume>> shows the structure graphically.
+crossref:vinum[vinum-mirrored-vol, A Mirrored [.filename]#vinum# Volume] shows the structure graphically.
 
 [[vinum-mirrored-vol]]
 .A Mirrored [.filename]#vinum# Volume
@@ -384,7 +384,7 @@ After processing this definition, the configuration looks like:
 .A Striped [.filename]#vinum# Volume
 image::vinum-striped-vol.png[]
 
-This volume is represented in <<vinum-striped-vol, A Striped [.filename]#vinum# Volume>>.
+This volume is represented in crossref:vinum[vinum-striped-vol, A Striped [.filename]#vinum# Volume].
 The darkness of the stripes indicates the position within the plex address space, where the lightest stripes come first and the darkest last.
 
 === Resilience and Performance
@@ -412,7 +412,7 @@ A typical configuration file might be:
 The subdisks of the second plex are offset by two drives from those of the first plex.
 This helps to ensure that writes do not go to the same subdisks even if a transfer goes over two drives.
 
-<<vinum-raid10-vol, A Mirrored, Striped [.filename]#vinum# Volume>> represents the structure of this volume.
+crossref:vinum[vinum-raid10-vol, A Mirrored, Striped [.filename]#vinum# Volume] represents the structure of this volume.
 
 [[vinum-raid10-vol]]
 .A Mirrored, Striped [.filename]#vinum# Volume
@@ -672,7 +672,8 @@ The bsdlabel for these devices might look like:
 ....
 
 It can be observed that the `size` parameter for the faked `a` partition matches the value outlined above, while the `offset` parameter is the sum of the offset within the [.filename]#vinum# partition `h`, and the offset of this partition within the device or slice.
-This is a typical setup that is necessary to avoid the problem described in <<vinum-root-panic, Nothing Boots, the Bootstrap Panics>>.
+This is a typical setup that is necessary to avoid the problem described in
+crossref:vinum[vinum-root-panic, Nothing Boots, the Bootstrap Panics].
 The entire `a` partition is completely within the `h` partition containing all the [.filename]#vinum# data for this device.
 
 In the above example, the entire device is dedicated to [.filename]#vinum# and there is no leftover pre-[.filename]#vinum# root partition.
