--- a/documentation/content/en/books/arch-handbook/sound/_index.adoc
+++ b/documentation/content/en/books/arch-handbook/sound/_index.adoc
@@ -96,9 +96,13 @@ However, sound drivers differ in some ways:
 ....
 +
 Most sound drivers  need to store additional private information about their device. A private data structure is usually allocated in the attach routine. Its address is passed to [.filename]#pcm# by the calls to `pcm_register()` and `mixer_init()`. [.filename]#pcm# later passes back this address as a parameter in calls to the sound driver interfaces.
-* The sound driver attach routine should declare its MIXER or AC97 interface to [.filename]#pcm# by calling `mixer_init()`. For a MIXER interface, this causes in turn a call to <<xxxmixer-init,`xxxmixer_init()`>>.
+* The sound driver attach routine should declare its MIXER or AC97 interface to
+  [.filename]#pcm# by calling `mixer_init()`. For a MIXER interface, this causes
+  in turn a call to crossref:sound[xxxmixer-init,`xxxmixer_init()`].
 * The sound driver attach routine declares its general CHANNEL configuration to [.filename]#pcm# by calling `pcm_register(dev, sc, nplay, nrec)`, where `sc` is the address for the device data structure, used in further calls from [.filename]#pcm#, and `nplay` and `nrec` are the number of play and record channels.
-* The sound driver attach routine declares each of its channel objects by calls to `pcm_addchan()`. This sets up the channel glue in [.filename]#pcm# and causes in turn a call to <<xxxchannel-init,`xxxchannel_init()`>>.
+* The sound driver attach routine declares each of its channel objects by calls
+  to `pcm_addchan()`. This sets up the channel glue in [.filename]#pcm# and
+  causes in turn a call to crossref:sound[xxxchannel-init,`xxxchannel_init()`].
 * The sound driver detach routine should call `pcm_unregister()` before releasing its resources.
 
 There are two possible methods to handle non-PnP devices:
@@ -111,7 +115,8 @@ There are two possible methods to handle non-PnP devices:
 [[oss-interfaces]]
 == Interfaces
 
-The interface between the [.filename]#pcm# core and the sound drivers is defined in terms of <<kernel-objects,kernel objects>>.
+The interface between the [.filename]#pcm# core and the sound drivers is defined
+in terms of crossref:kobj[kernel-objects,kernel objects].
 
 There are two main interfaces that a sound driver will usually provide: _CHANNEL_ and either _MIXER_ or _AC97_.
 
@@ -137,14 +142,16 @@ The shared memory area has a size of `sndbuf_getsize()` and is divided into fixe
 
 When playing, the general transfer mechanism is as follows (reverse the idea for recording):
 
-* [.filename]#pcm# initially fills up the buffer, then calls the sound driver's <<channel-trigger,`xxxchannel_trigger()`>> function with a parameter of PCMTRIG_START.
+* [.filename]#pcm# initially fills up the buffer, then calls the sound driver's
+  crossref:sound[channel-trigger,`xxxchannel_trigger()`] function with a parameter of PCMTRIG_START.
 * The sound driver then arranges to repeatedly transfer the whole memory area (`sndbuf_getbuf()`, `sndbuf_getsize()`) to the device, in blocks of `sndbuf_getblksz()` bytes. It calls back the `chn_intr()`[.filename]#pcm# function for each transferred block (this will typically happen at interrupt time).
 * `chn_intr()` arranges to copy new data to the area that was transferred to the device (now free), and make appropriate updates to the `snd_dbuf` structure.
 
 [[xxxchannel-init]]
 ==== channel_init
 
-`xxxchannel_init()` is called to initialize each of the play or record channels. The calls are initiated from the sound driver attach routine. (See the <<pcm-probe-and-attach,probe and attach section>>).
+`xxxchannel_init()` is called to initialize each of the play or record channels.
+The calls are initiated from the sound driver attach routine. (See the crossref:sound[pcm-probe-and-attach,probe and attach section).
 
 [.programlisting]
 ....
