--- a/documentation/content/en/books/developers-handbook/tools/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/tools/_index.adoc
@@ -67,7 +67,7 @@ although it is hoped that most programmers will find something of value in it.
 FreeBSD offers an excellent development environment.
 Compilers for C and C++ and an assembler come with the basic system, not to mention classic UNIX(R) tools such as `sed` and `awk`.
 If that is not enough, there are many more compilers and interpreters in the Ports collection.
-The following section, <<tools-programming,Introduction to Programming>>, lists some of the available options.
+The following section, crossref:tools[tools-programming,Introduction to Programming], lists some of the available options.
 FreeBSD is very compatible with standards such as POSIX(R) and ANSI C, as well with its own BSD heritage, so it is possible to write applications that will compile and run with little or no modification on a wide range of platforms.
 
 However, all this power can be rather overwhelming at first if you have never written programs on a UNIX(R) platform before.
@@ -185,7 +185,7 @@ Moreover, distributing a program written for a compiler is usually more straight
 
 As the edit-compile-run-debug cycle is rather tedious when using separate programs, many commercial compiler makers have produced Integrated Development Environments (IDEs for short).
 FreeBSD does not include an IDE in the base system, but package:devel/kdevelop[] is available in the Ports Collection and many use Emacs for this purpose.
-Using Emacs as an IDE is discussed in <<emacs>>.
+Using Emacs as an IDE is discussed in crossref:tools[emacs].
 
 [[tools-compiling]]
 == Compiling with `cc`
@@ -372,7 +372,7 @@ Basically, if the program failed under certain conditions, the system would writ
 
 ==== Fascinating stuff, but what I am supposed to do now?
 
-Use a debugger to analyze the core (see <<debugging>>).
+Use a debugger to analyze the core (see crossref:tools[debugging]).
 
 ==== When my program dumped core, it said something about a segmentation fault. What is that?
 
