--- a/documentation/content/en/books/developers-handbook/x86/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/x86/_index.adoc
@@ -1064,7 +1064,7 @@ Not bad for a 644-byte executable, is it!
 [NOTE]
 ====
 This approach to buffered input/output still contains a hidden danger.
-I will discuss-and fix-it later, when I talk about the <<x86-buffered-dark-side,dark side of buffering>>.
+I will discuss-and fix-it later, when I talk about the crossref:x86[x86-buffered-dark-side,dark side of buffering].
 ====
 
 [[x86-ungetc]]
@@ -1073,7 +1073,7 @@ I will discuss-and fix-it later, when I talk about the <<x86-buffered-dark-side,
 [WARNING]
 ====
 This may be a somewhat advanced topic, mostly of interest to programmers familiar with the theory of compilers.
-If you wish, you may <<x86-command-line,skip to the next section>>, and perhaps read this later.
+If you wish, you may crossref:x86[x86-command-line,skip to the next section], and perhaps read this later.
 ====
 
 While our sample program does not require it, more sophisticated filters often need to look ahead.
