--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -154,7 +154,7 @@ Such routes only show up on the host that supports the alias and all other hosts
 The final line (destination subnet `224`) deals with multicasting.
 
 Various attributes of each route can be seen in the `Flags` column.
-<<routeflags>> summarizes some of these flags and their meanings:
+crossref:advanced-networking[routeflags] summarizes some of these flags and their meanings:
 
 [[routeflags]]
 .Commonly Seen Routing Table Flags
@@ -656,7 +656,7 @@ This can be particularly useful when a FreeBSD machine is acting as a gateway to
 ==== Basic Settings
 
 Before configuring a FreeBSD machine as an AP, the kernel must be configured with the appropriate networking support for the wireless card as well as the security protocols being used.
-For more details, see <<network-wireless-basic>>.
+For more details, see crossref:advanced-networking[network-wireless-basic].
 
 [NOTE]
 ====
@@ -756,7 +756,8 @@ The client machine found the AP and can be associated with it:
 ==== WPA2 Host-based Access Point
 
 This section focuses on setting up a FreeBSD access point using the WPA2 security protocol.
-More details regarding WPA and the configuration of WPA-based wireless clients can be found in <<network-wireless-wpa>>.
+More details regarding WPA and the configuration of WPA-based wireless clients
+can be found in crossref:advanced-networking[network-wireless-wpa].
 
 The man:hostapd[8] daemon is used to deal with client authentication and key management on the WPA2-enabled AP.
 
@@ -768,7 +769,8 @@ Once the AP is correctly working, man:hostapd[8] can be automatically started at
 hostapd_enable="YES"
 ....
 
-Before trying to configure man:hostapd[8], first configure the basic settings introduced in <<network-wireless-ap-basic>>.
+Before trying to configure man:hostapd[8], first configure the basic settings
+introduced in crossref:advanced-networking[network-wireless-ap-basic].
 
 ===== WPA2-PSK
 
@@ -824,7 +826,7 @@ wlan0: flags=8943<UP,BROADCAST,RUNNING,PROMISC,SIMPLEX,MULTICAST> metric 0 mtu 1
 ....
 
 Once the AP is running, the clients can associate with it.
-See <<network-wireless-wpa>> for more details.
+See crossref:advanced-networking[network-wireless-wpa] for more details.
 It is possible to see the stations associated with the AP using `ifconfig _wlan0_ list sta`.
 
 [[network-usb-tethering]]
