--- a/documentation/content/en/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/en/books/handbook/bsdinstall/_index.adoc
@@ -171,8 +171,13 @@ Installation file types:
 * `*-bootonly.iso*`: This is the smallest installation file as it only contains the installer. A working Internet connection is required during installation as the installer will download the files it needs to complete the FreeBSD installation. This file should be burned to optical media.
 * `*-disc1.iso*`: This file contains all of the files needed to install FreeBSD, its source, and the Ports Collection. This file should be burned to optical media.
 * `*-dvd1.iso*`: This file contains all of the files needed to install FreeBSD, its source, and the Ports Collection. It also contains a set of popular binary packages for installing a window manager and some applications so that a complete system can be installed from media without requiring a connection to the Internet. This file should be burned to optical media.
-* `*-memstick.img*`: This file contains all of the files needed to install FreeBSD, its source, and the Ports Collection. Write this file to a USB stick as shown in <<bsdinstall-usb>>.
-* `*-mini-memstick.img*`: Like `*-bootonly.iso*`, does not include installation files, but downloads them as needed. A working internet connection is required during installation. It should be written to a USB stick as shown in <<bsdinstall-usb>>.
+* `*-memstick.img*`: This file contains all of the files needed to install
+  FreeBSD, its source, and the Ports Collection. Write this file to a USB stick
+  as shown in crossref:bsdinstall[bsdinstall-usb].
+* `*-mini-memstick.img*`: Like `*-bootonly.iso*`, does not include installation
+  files, but downloads them as needed. A working internet connection is required
+  during installation. It should be written to a USB stick as shown in
+  crossref:bsdinstall[bsdinstall-usb].
 
 After downloading the image file, download at least one _checksum_ file from the same directory.
 There are two _checksum_ files available, named after the release number and the architecture name.
@@ -277,7 +282,9 @@ The install can be exited at any time prior to this warning.
 If there is a concern that something is incorrectly configured, just turn the computer off before this point and no changes will be made to the system's disks.
 ====
 
-This section describes how to boot the system from the installation media which was prepared using the instructions in <<bsdinstall-installation-media>>.
+This section describes how to boot the system from the installation media which
+was prepared using the instructions in
+crossref:bsdinstall[bsdinstall-installation-media].
 When using a bootable USB stick, plug in the USB stick before turning on the computer.
 When booting from CD or DVD, turn on the computer and insert the media at the first opportunity.
 How to configure the system to boot from the inserted media depends upon the architecture.
@@ -302,7 +309,8 @@ The following options are available.
 * `Reboot`: Reboots the system.
 * `Cons`: Allow to continue the installation by `video`, `serial`, `Dual (serial primary)` or `Dual (Video primary)`
 * `Kernel`: Loads a different kernel.
-* `Boot Options`: Opens the menu shown in, and described under, <<bsdinstall-boot-options-menu>>.
+* `Boot Options`: Opens the menu shown in, and described under,
+  crossref:bsdinstall[bsdinstall-boot-options-menu].
 
 [[bsdinstall-boot-options-menu]]
 .FreeBSD Boot Options Menu
@@ -322,7 +330,8 @@ Several options can be toggled using this menu:
 
 After making the needed selections, press kbd:[1] or kbd:[Backspace] to return to the main boot menu, then press kbd:[Enter] to continue booting into FreeBSD.
 A series of boot messages will appear as FreeBSD carries out its hardware device probes and loads the installation program.
-Once the boot is complete, the welcome menu shown in <<bsdinstall-choose-mode>> will be displayed.
+Once the boot is complete, the welcome menu shown in
+crossref:bsdinstall[bsdinstall-choose-mode] will be displayed.
 
 [[bsdinstall-choose-mode]]
 .Welcome Menu
@@ -333,7 +342,7 @@ The rest of this chapter describes how to use this installer.
 Otherwise, use the right or left arrows or the colorized letter to select the desired menu item.
 The btn:[Shell] can be used to access a FreeBSD shell in order to use command line utilities to prepare the disks before installation.
 The btn:[Live CD] option can be used to try out FreeBSD before installing it.
-The live version is described in <<using-live-cd>>.
+The live version is described in crossref:bsdinstall[using-live-cd].
 
 [TIP]
 ====
@@ -352,13 +361,15 @@ When finished, press kbd:[Enter] to save the selection and move onto the next sc
 [[bsdinstall-keymap]]
 === Selecting the Keymap Menu
 
-Before starting the process, bsdinstall will load the keymap files as shown in <<bsdinstall-keymap-loading>>.
+Before starting the process, bsdinstall will load the keymap files as shown in
+crossref:bsdinstall[bsdinstall-keymap-loading].
 
 [[bsdinstall-keymap-loading]]
 .Keymap Loading
 image::bsdinstall-keymap-loading.png[Keymap loading]
 
-After the keymaps have been loaded, bsdinstall displays the menu shown in <<bsdinstall-keymap-10>>.
+After the keymaps have been loaded, bsdinstall displays the menu shown in
+crossref:bsdinstall[bsdinstall-keymap-10].
 Use the up and down arrows to select the keymap that most closely represents the mapping of the keyboard attached to the system.
 Press kbd:[Enter] to save the selection.
 
@@ -372,7 +383,9 @@ Pressing kbd:[Esc] will exit this menu and use the default keymap.
 If the choice of keymap is not clear, [.guimenuitem]#United States of America ISO-8859-1# is also a safe option.
 ====
 
-In addition, when selecting a different keymap, the user can try the keymap and ensure it is correct before proceeding, as shown in <<bsdinstall-keymap-testing>>.
+In addition, when selecting a different keymap, the user can try the keymap and
+ensure it is correct before proceeding, as shown in
+crossref:bsdinstall[bsdinstall-keymap-testing].
 
 [[bsdinstall-keymap-testing]]
 .Keymap Testing Menu
@@ -422,9 +435,10 @@ The FreeBSD Ports Collection takes up about {ports-size} of disk space.
 [[bsdinstall-netinstall]]
 === Installing from the Network
 
-The menu shown in <<bsdinstall-netinstall-notify>> only appears when installing from a `-bootonly.iso` or `-mini-memstick.img`, as this installation media does not hold copies of the installation files.
+The menu shown in crossref:bsdinstall[bsdinstall-netinstall-notify] only appears when installing from a `-bootonly.iso` or `-mini-memstick.img`, as this installation media does not hold copies of the installation files.
 Since the installation files must be retrieved over a network connection, this menu indicates that the network interface must be configured first.
-If this menu is shown in any step of the process, remember to follow the instructions in <<bsdinstall-config-network-dev>>.
+If this menu is shown in any step of the process, remember to follow the
+instructions in crossref:bsdinstall[bsdinstall-config-network-dev].
 
 [[bsdinstall-netinstall-notify]]
 .Installing from the Network
@@ -522,7 +536,7 @@ The next menu shows a list with the available partition scheme types.
 GPT is usually the most appropriate choice for amd64 computers.
 Older computers that are not compatible with GPT should use MBR.
 The other partition schemes are generally used for uncommon or older computers.
-More information is available in <<partition-schemes>>.
+More information is available in crossref:bsdinstall[partition-schemes].
 
 [[bsdinstall-ufs-scheme]]
 .Select Partition Scheme
@@ -546,7 +560,8 @@ Otherwise, select btn:[Commit] to start the installation process.
 .Final Confirmation
 image::bsdinstall-final-confirmation.png[Menu indicating to the user that all changes will be written to disk and informing that if he decides to continue the existing data will be permanently deleted.]
 
-To continue with the installation process, go to <<bsdinstall-fetching-distribution>>.
+To continue with the installation process, go to
+crossref:bsdinstall[bsdinstall-fetching-distribution].
 
 [[bsdinstall-part-manual]]
 === Manual Partitioning
@@ -610,7 +625,7 @@ Multiple file system partitions can be created. Some people prefer a traditional
 Note that `/tmp` can be added later as a memory-based file system (man:tmpfs[5]) on systems with sufficient memory.
 ====
 
-See <<bsdinstall-part-manual-splitfs>> for an example.
+See crossref:bsdinstall[bsdinstall-part-manual-splitfs] for an example.
 
 The `Size` may be entered with common abbreviations: _K_ for kilobytes, _M_ for megabytes, or _G_ for gigabytes.
 
@@ -688,7 +703,9 @@ By default, FreeBSD's `gptboot` expects the first UFS partition to be the `/` pa
 |===
 ====
 
-After the custom partitions have been created, select btn:[Finish] to continue with the installation and go to <<bsdinstall-fetching-distribution>>.
+After the custom partitions have been created, select btn:[Finish] to continue
+with the installation and go to
+crossref:bsdinstall[bsdinstall-fetching-distribution].
 
 [[bsdinstall-part-zfs]]
 === Guided Partitioning Using Root-on-ZFS
@@ -703,7 +720,11 @@ image::bsdinstall-zfs-menu.png[Menu showing the different options to configure t
 Here is a summary of the options in this menu:
 
 * `Install` - Proceed with the installation with the selected options.
-* `Pool Type/Disks` - Configure the `Pool Type` and the disk(s) that will constitute the pool. The automatic ZFS installer currently only supports the creation of a single top level vdev, except in stripe mode. To create more complex pools, use the instructions in <<bsdinstall-part-shell>> to create the pool.
+* `Pool Type/Disks` - Configure the `Pool Type` and the disk(s) that will
+  constitute the pool. The automatic ZFS installer currently only supports the
+  creation of a single top level vdev, except in stripe mode. To create more
+  complex pools, use the instructions in
+  crossref:bsdinstall[bsdinstall-part-shell] to create the pool.
 * `Rescan Devices` - Repopulate the list of available disks.
 * `Disk Info` - This menu can be used to inspect each disk, including its partition table and various other information such as the device model number and serial number, if available.
 * `Pool Name` - Establish the name of the pool. The default name is _zroot_.
@@ -786,7 +807,8 @@ image::bsdinstall-zfs-geli_password.png[Menu requesting the password to encrypt 
 image::bsdinstall-zfs-init-encription.png[Menu showing that the encryption is initializing.]
 
 The installation then proceeds normally.
-To continue with the installation, go to <<bsdinstall-fetching-distribution>>.
+To continue with the installation, go to
+crossref:bsdinstall[bsdinstall-fetching-distribution].
 
 [[bsdinstall-part-shell]]
 === Shell Mode Partitioning
@@ -847,7 +869,8 @@ Select the interface to configure.
 .Choose a Network Interface
 image::bsdinstall-configure-network-interface.png[Menu showing the different network interfaces to configure.]
 
-If an Ethernet interface is selected, the installer will skip ahead to the menu shown in <<bsdinstall-configure-net-ipv4>>.
+If an Ethernet interface is selected, the installer will skip ahead to the menu
+shown in crossref:bsdinstall[bsdinstall-configure-net-ipv4].
 If a wireless network interface is chosen, the system will instead scan for wireless access points:
 
 [[bsdinstall-wireless-scan]]
@@ -886,7 +909,8 @@ Otherwise, the addressing information needs to be input manually as a static con
 [NOTE]
 ====
 Do not enter random network information as it will not work.
-If a DHCP server is not available, obtain the information listed in <<bsdinstall-collect-network-information, Required Network Information>> from the network administrator or Internet service provider.
+If a DHCP server is not available, obtain the information listed in
+crossref:bsdinstall[bsdinstall-collect-network-information, Required Network Information] from the network administrator or Internet service provider.
 ====
 
 If a DHCP server is available, select btn:[Yes] in the next menu to automatically configure the network interface.
@@ -1064,7 +1088,7 @@ Select btn:[Yes] to add new users.
 image::bsdinstall-adduser1.png[Menu requesting if a user want to be added to the system.]
 
 Follow the prompts and input the requested information for the user account.
-The example shown in <<bsdinstall-add-user2>> creates the `asample` user account.
+The example shown in crossref:bsdinstall[bsdinstall-add-user2] creates the `asample` user account.
 
 [[bsdinstall-add-user2]]
 .Enter User Information
@@ -1112,13 +1136,13 @@ image::bsdinstall-finalconfiguration.png[Menu showing different options to perfo
 
 Use this menu to make any changes or to do any additional configuration before completing the installation.
 
-* `Add User` - Described in <<bsdinstall-addusers>>.
-* `Root Password` - Described in <<bsdinstall-post-root>>.
-* `Hostname` - Described in <<bsdinstall-hostname>>.
-* `Network` - Described in <<bsdinstall-config-network-dev>>.
-* `Services` - Described in <<bsdinstall-sysconf>>.
-* `System Hardening` - Described in <<bsdinstall-hardening>>.
-* `Time Zone` - Described in <<bsdinstall-timezone>>.
+* `Add User` - Described in crossref:bsdinstall[bsdinstall-addusers].
+* `Root Password` - Described in crossref:bsdinstall[bsdinstall-post-root].
+* `Hostname` - Described in crossref:bsdinstall[bsdinstall-hostname].
+* `Network` - Described in crossref:bsdinstall[bsdinstall-config-network-dev].
+* `Services` - Described in crossref:bsdinstall[bsdinstall-sysconf].
+* `System Hardening` - Described in crossref:bsdinstall[bsdinstall-hardening].
+* `Time Zone` - Described in crossref:bsdinstall[bsdinstall-timezone].
 * `Handbook` - Download and install the FreeBSD Handbook.
 
 Once configuration is complete, select btn:[Exit].
@@ -1151,7 +1175,7 @@ When finished, press kbd:[Scroll-Lock] again to unlock the display and return to
 To review these messages once the system has been up for some time, type `less /var/run/dmesg.boot` from a command prompt.
 Press kbd:[q] to return to the command line after viewing.
 
-If sshd was enabled in <<bsdinstall-config-serv>>, the first boot might be a bit slower as the system generates SSH host keys.
+If sshd was enabled in crossref:bsdinstall[bsdinstall-config-serv], the first boot might be a bit slower as the system generates SSH host keys.
 Subsequent boots will be faster.
 The fingerprints of the keys are then displayed as in the following example:
 
@@ -1236,7 +1260,8 @@ More information about the boot loader can be found in crossref:boot[boot-synops
 [[using-live-cd]]
 == Using the Live CD
 
-The welcome menu of bsdinstall, shown in <<bsdinstall-choose-mode>>, provides a btn:[Live CD] option.
+The welcome menu of bsdinstall, shown in
+crossref:bsdinstall[bsdinstall-choose-mode], provides a btn:[Live CD] option.
 This is useful for those who are still wondering whether FreeBSD is the right operating system for them and want to test some of the features before installing.
 
 The following points should be noted before using the btn:[Live CD]:
