--- a/documentation/content/en/books/handbook/config/_index.adoc
+++ b/documentation/content/en/books/handbook/config/_index.adoc
@@ -74,7 +74,7 @@ FreeBSD base system configuration is located at the [.filename]#/etc# directory,
 and the [.filename]#/usr/local/etc# directory contains all the configuration files of the applications installed on the system through the ports collection and packages.
 
 The kernel state configuration is located in [.filename]#/etc/sysctl.conf#.
-In the section <<configtuning-sysctl>>, the operation of man:sysctl[8] will be explained in more detail.
+In the section crossref:config[configtuning-sysctl], the operation of man:sysctl[8] will be explained in more detail.
 
 For more information about the FreeBSD file system structure refer to man:hier[7].
 
@@ -124,7 +124,10 @@ The [.filename]#/etc# directory contains all of the FreeBSD base system configur
 |System and daemon startup/control scripts, see man:rc[8] for more information.
 
 |[.filename]#/etc/rc.conf#
-|Contains descriptive information about the local host name, configuration details for any potential network interfaces and which services should be started up at system initial boot time. More information in <<configtuning-core-configuration>>
+|Contains descriptive information about the local host name, configuration
+details for any potential network interfaces and which services should be
+started up at system initial boot time. More information in
+crossref:bsdinstall[configtuning-core-configuration]
 
 |[.filename]#/etc/security#
 |OpenBSM audit configuration files, see man:audit[8] for more information.
@@ -139,7 +142,8 @@ The [.filename]#/etc# directory contains all of the FreeBSD base system configur
 |OpenSSL configuration files.
 
 |[.filename]#/etc/sysctl.conf#
-|Contains settings for the kernel. More information in <<configtuning-sysctl>>
+|Contains settings for the kernel. More information in
+crossref:bsdinstall[configtuning-sysctl]
 
 |===
 
