--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -899,7 +899,7 @@ To install GNU Emacs, execute:
 == Desktop office productivity
 
 When it comes to productivity, users often look for an office suite or an easy-to-use word processor.
-While some desktop environments like <<kde-environment, KDE Plasma>> provide an office suite, there is no default productivity package.
+While some desktop environments like crossref:desktop[kde-environment, KDE Plasma] provide an office suite, there is no default productivity package.
 Several office suites and graphical word processors are available for FreeBSD, regardless of the installed desktop environments.
 
 This section demonstrates how to install the following popular productivity software and indicates if the application is resource-heavy, takes time to compile from ports, or has any major dependencies.
