--- a/documentation/content/en/books/handbook/disks/_index.adoc
+++ b/documentation/content/en/books/handbook/disks/_index.adoc
@@ -353,7 +353,7 @@ Refer to man:usbconfig[8] for more information about this command.
 ugen0.3: <Simple Drive STECH> at usbus0, cfg=0 md=HOST spd=HIGH (480Mbps) pwr=ON (2mA)
 ....
 
-If the device has not been formatted, refer to <<disks-adding>> for instructions on how to format and create partitions on the USB drive.
+If the device has not been formatted, refer to crossref:disks[disks-adding] for instructions on how to format and create partitions on the USB drive.
 If the drive comes with a file system, it can be mounted by `root` using the instructions in crossref:basics[mount-unmount,“Mounting and Unmounting File Systems”].
 
 [WARNING]
@@ -703,7 +703,7 @@ To do so, use [.filename]#dd# with the device name as the input file and the nam
 # dd if=/dev/cd0 of=file.iso bs=2048
 ....
 
-The resulting image file can be burned to CD as described in <<cdrecord>>.
+The resulting image file can be burned to CD as described in crossref:disks[cdrecord].
 ====
 
 [[mounting-cd]]
@@ -773,8 +773,9 @@ In order to mount a data CD, the data must be written using `mkisofs`.
 
 To duplicate an audio CD, extract the audio data from the CD to a series of files, then write these files to a blank CD.
 
-<<using-cdrecord>> describes how to duplicate and burn an audio CD.
-If the FreeBSD version is less than 10.0 and the device is ATAPI, the `atapicam` module must be first loaded using the instructions in <<atapicam>>.
+crossref:disks[using-cdrecord] describes how to duplicate and burn an audio CD.
+If the FreeBSD version is less than 10.0 and the device is ATAPI, the `atapicam`
+module must be first loaded using the instructions in crossref:disks[atapicam].
 
 [[using-cdrecord]]
 [.procedure]
@@ -795,7 +796,7 @@ Refer to the `cdda2wav` manual page for instructions on how to specify a device 
 % cdrecord -v dev=2,0 -dao -useinfo  *.wav
 ....
 +
-Make sure that _2,0_ is set appropriately, as described in <<cdrecord>>.
+Make sure that _2,0_ is set appropriately, as described in crossref:disks[cdrecord].
 
 [[creating-dvds]]
 == Creating and Using DVD Media
@@ -807,7 +808,10 @@ Five physical recordable formats can be defined for a recordable DVD:
 
 * DVD-R: This was the first DVD recordable format available. The DVD-R standard is defined by the http://www.dvdforum.org/forum.shtml[DVD Forum]. This format is write once.
 * DVD-RW: This is the rewritable version of the DVD-R standard. A DVD-RW can be rewritten about 1000 times.
-* DVD-RAM: This is a rewritable format which can be seen as a removable hard drive. However, this media is not compatible with most DVD-ROM drives and DVD-Video players as only a few DVD writers support the DVD-RAM format. Refer to <<creating-dvd-ram>> for more information on DVD-RAM use.
+* DVD-RAM: This is a rewritable format which can be seen as a removable hard
+  drive. However, this media is not compatible with most DVD-ROM drives and
+  DVD-Video players as only a few DVD writers support the DVD-RAM format. Refer
+  to crossref:disks[creating-dvd-ram] for more information on DVD-RAM use.
 * DVD+RW: This is a rewritable format defined by the https://en.wikipedia.org/wiki/DVD%2BRW_Alliance[DVD+RW Alliance]. A DVD+RW can be rewritten about 1000 times.
 * DVD+R: This format is the write once variation of the DVD+RW format.
 
@@ -825,9 +829,10 @@ Before choosing the type of media, ensure that both the burner and the DVD-Video
 To perform DVD recording, use man:growisofs[1].
 This command is part of the package:sysutils/dvd+rw-tools[] utilities which support all DVD media types.
 
-These tools use the SCSI subsystem to access the devices, therefore <<atapicam,ATAPI/CAM support>> must be loaded or statically compiled into the kernel.
+These tools use the SCSI subsystem to access the devices, therefore
+crossref:disks[atapicam,ATAPI/CAM support] must be loaded or statically compiled into the kernel.
 This support is not needed if the burner uses the USB interface.
-Refer to <<usb-disks>> for more details on USB device configuration.
+Refer to crossref:disks[usb-disks] for more details on USB device configuration.
 
 DMA access must also be enabled for ATAPI devices, by adding the following line to [.filename]#/boot/loader.conf#:
 
@@ -845,7 +850,7 @@ For a graphical user interface, consider using package:sysutils/k3b[] which prov
 
 === Burning Data DVDs
 
-Since man:growisofs[1] is a front-end to <<mkisofs,mkisofs>>, it will invoke man:mkisofs[8] to create the file system layout and perform the write on the DVD.
+Since man:growisofs[1] is a front-end to crossref:disks[mkisofs,mkisofs], it will invoke man:mkisofs[8] to create the file system layout and perform the write on the DVD.
 This means that an image of the data does not need to be created before the burning process.
 
 To burn to a DVD+R or a DVD-R the data in [.filename]#/path/to/data#, use the following command:
@@ -1838,7 +1843,7 @@ The following example demonstrates adding a new hard drive to a system that will
 .Procedure: Encrypting a Partition with gbde
 . Add the New Hard Drive
 +
-Install the new drive to the system as explained in <<disks-adding>>.
+Install the new drive to the system as explained in crossref:disks[disks-adding].
 For the purposes of this example, a new hard drive partition has been added as [.filename]#/dev/ad4s1c# and [.filename]#/dev/ad0s1*# represents the existing standard FreeBSD partitions.
 +
 [source,shell]
