--- a/documentation/content/en/books/handbook/firewalls/_index.adoc
+++ b/documentation/content/en/books/handbook/firewalls/_index.adoc
@@ -245,7 +245,7 @@ The FreeBSD installation includes several sample files located in [.filename]#/u
 Refer to the http://www.openbsd.org/faq/pf/[PF FAQ] for complete coverage of PF rulesets.
 
 To control PF, use `pfctl`.
-<<pfctl>> summarizes some useful options to this command.
+crossref:firewalls[pfctl] summarizes some useful options to this command.
 Refer to man:pfctl[8] for a description of all available options:
 [[pfctl]]
 .Useful `pfctl` Options
@@ -1066,7 +1066,8 @@ This section describes how to enable IPFW, provides an overview of its rule synt
 
 IPFW is included in the basic FreeBSD install as a kernel loadable module, meaning that a custom kernel is not needed in order to enable IPFW.
 
-For those users who wish to statically compile IPFW support into a custom kernel, see <<firewalls-ipfw-kernelconfig>>.
+For those users who wish to statically compile IPFW support into a custom
+kernel, see crossref:firewalls[firewalls-ipfw-kernelconfig].
 
 To configure the system to enable IPFW at boot time, add `firewall_enable="YES"` to [.filename]#/etc/rc.conf#:
 
