--- a/documentation/content/en/books/handbook/geom/_index.adoc
+++ b/documentation/content/en/books/handbook/geom/_index.adoc
@@ -338,7 +338,7 @@ Reboot the system to test the new mirror and verify that all data has been copie
 The BIOS will see the mirror as two individual drives rather than a mirror.
 Since the drives are identical, it does not matter which is selected to boot.
 
-See <<gmirror-troubleshooting>> if there are problems booting.
+See crossref:geom[gmirror-troubleshooting] if there are problems booting.
 Powering down and disconnecting the original [.filename]#ada0# disk will allow it to be kept as an offline backup.
 
 In use, the mirror will behave just like the original single drive.
@@ -556,7 +556,7 @@ Each file system dumped with `dump -L` will create a snapshot first, which can t
 
 Restart the system, booting from [.filename]#ada1#.
 If everything is working, the system will boot from [.filename]#mirror/gm0#, which now contains the same data as [.filename]#ada0# had previously.
-See <<gmirror-troubleshooting>> if there are problems booting.
+See crossref:geom[gmirror-troubleshooting] if there are problems booting.
 
 At this point, the mirror still consists of only the single [.filename]#ada1# disk.
 
@@ -682,7 +682,8 @@ The mirror is told to forget drives that are not currently connected:
 # gmirror forget gm0
 ....
 
-Any old metadata should be cleared from the replacement disk using the instructions in <<geom-mirror-metadata>>.
+Any old metadata should be cleared from the replacement disk using the
+instructions in crossref:geom[geom-mirror-metadata].
 Then the replacement disk, [.filename]#ada4# for this example, is inserted into the mirror:
 
 [source,shell]
