--- a/documentation/content/en/books/handbook/kernelconfig/_index.adoc
+++ b/documentation/content/en/books/handbook/kernelconfig/_index.adoc
@@ -284,7 +284,8 @@ Once the edits to the custom configuration file have been saved, the source code
 # make installkernel KERNCONF=MYKERNEL
 ....
 +
-. Shutdown the system and reboot into the new kernel. If something goes wrong, refer to <<kernelconfig-noboot, The kernel does not boot>>.
+. Shutdown the system and reboot into the new kernel. If something goes wrong,
+  refer to crossref:kernelconfig[kernelconfig-noboot, The kernel does not boot].
 ====
 
 By default, when a custom kernel is compiled, all kernel modules are rebuilt.
