--- a/documentation/content/en/books/handbook/mirrors/_index.adoc
+++ b/documentation/content/en/books/handbook/mirrors/_index.adoc
@@ -355,7 +355,8 @@ For example, the URL `https://git.FreeBSD.org/src.git` specifies the main branch
 | Read-only ports repo via anon-ssh        | `ssh://anongit@git.FreeBSD.org/ports.git`
 |=======================================================
 
-External mirrors maintained by project members are also available; please refer to the <<external-mirrors>> section.
+External mirrors maintained by project members are also available; please refer
+to the crossref:mirrors[external-mirrors] section.
 
 To clone a copy of the FreeBSD system source code repository:
 
