--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -895,7 +895,7 @@ nis_client_enable="YES"
 +
 This line configures the client to provide anyone with a valid account in the NIS server's password maps an account on the client.
 There are many ways to configure the NIS client by modifying this line.
-One method is described in <<network-netgroups>>.
+One method is described in crossref:network-servers[network-netgroups].
 For more detailed reading, refer to the book `Managing NFS and NIS`, published by O'Reilly Media.
 . To import all possible group entries from the NIS server, add this line to [.filename]#/etc/group#:
 +
