--- a/documentation/content/en/books/handbook/network/_index.adoc
+++ b/documentation/content/en/books/handbook/network/_index.adoc
@@ -615,7 +615,8 @@ network={
 === Basic Wireless Configuration
 
 The first step will be to configure the wireless network card to an interface.
-To find out what wireless network cards are in the system check the section <<config-identify-network-adapter>>.
+To find out what wireless network cards are in the system check the section
+crossref:network[config-identify-network-adapter].
 
 [source,shell]
 ....
