--- a/documentation/content/en/books/handbook/ports/_index.adoc
+++ b/documentation/content/en/books/handbook/ports/_index.adoc
@@ -130,7 +130,8 @@ man:pkg[8] provides an interface for manipulating	packages: registering, adding,
 
 For sites wishing to only use prebuilt binary packages from the FreeBSD mirrors, managing packages with man:pkg[8] can be sufficient.
 
-However, for those sites building from source a separate <<ports-upgrading-tools, port management tool>> will be needed.
+However, for those sites building from source a separate
+crossref:ports[ports-upgrading-tools, port management tool] will be needed.
 
 Since man:pkg[8] only works with binary packages, it is not a replacement for such tools.
 Those tools can be used to install software from both binary packages and the Ports Collection, while man:pkg[8] installs only binary packages.
@@ -906,7 +907,7 @@ Over time, newer versions of software become available in the Ports Collection.
 This section describes how to determine which software can be upgraded and how to perform the upgrade.
 
 To determine if newer versions of installed ports are available, ensure that the latest version of the ports tree is installed,
-using the updating command described in <<ports-using-git-method, "Git Method">>.
+using the updating command described in crossref:ports[ports-using-git-method, "Git Method"].
 The following command will list the installed ports which are out of date:
 
 [source,shell]
@@ -1306,4 +1307,4 @@ Instead, any fixes and support come from the general community who subscribe to 
 +
 If there is no response to the email, use Bugzilla to submit a bug report using the instructions in extref:{problem-reports}[Writing FreeBSD Problem Reports].
 . Fix it! The extref:{porters-handbook}[Porter's Handbook] includes detailed information on the ports infrastructure so that you can fix the occasional broken port or even submit your own!
-. Install the package instead of the port using the instructions in <<pkgng-intro>>.
+. Install the package instead of the port using the instructions in crossref:ports[pkgng-intro].
