--- a/documentation/content/en/books/handbook/serialcomms/_index.adoc
+++ b/documentation/content/en/books/handbook/serialcomms/_index.adoc
@@ -102,7 +102,8 @@ The two most common types are null-modem cables and standard RS-232 cables.
 The documentation for the hardware should describe the type of cable required.
 
 These two types of cables differ in how the wires are connected to the connector.
-Each wire represents a signal, with the defined signals summarized in <<serialcomms-signal-names>>.
+Each wire represents a signal, with the defined signals summarized in
+crossref:serialcomms[serialcomms-signal-names].
 A standard serial cable passes all of the RS-232C signals straight through.
 For example, the "Transmitted Data" pin on one end of the cable goes to the "Transmitted Data" pin on the other end.
 This is the type of cable used to connect a modem to the FreeBSD system, and is also appropriate for some terminals.
@@ -110,7 +111,9 @@ This is the type of cable used to connect a modem to the FreeBSD system, and is 
 A null-modem cable switches the "Transmitted Data" pin of the connector on one end with the "Received Data" pin on the other end.
 The connector can be either a DB-25 or a DB-9.
 
-A null-modem cable can be constructed using the pin connections summarized in <<nullmodem-db25>>, <<nullmodem-db9>>, and <<nullmodem-db9-25>>.
+A null-modem cable can be constructed using the pin connections summarized in
+crossref:serialcomms[nullmodem-db25], crossref:serialcomms[nullmodem-db9], and
+crossref:serialcomms[nullmodem-db9-25].
 While the standard calls for a straight-through pin 1 to pin 1 "Protective Ground" line, it is often omitted.
 Some terminals work using only pins 2, 3, and 7, while others require different configurations.
 When in doubt, refer to the documentation for the hardware.
@@ -499,7 +502,7 @@ ttyu3   "/usr/libexec/getty std.115200"   dialup  off secure
 When attaching a terminal to one of those ports, modify the default entry to set the required speed and terminal type, to turn the device `on` and, if needed, to change the port's `secure` setting.
 If the terminal is connected to another port, add an entry for the port.
 
-<<ex-etc-ttys>> configures two terminals in [.filename]#/etc/ttys#.
+crossref:serialcomms[ex-etc-ttys] configures two terminals in [.filename]#/etc/ttys#.
 The first entry configures a Wyse-50 connected to [.filename]#COM2#.
 The second entry configures an old computer running Procomm terminal software emulating a VT-100 terminal.
 The computer is connected to the sixth serial port on a multi-port serial card.
@@ -608,7 +611,7 @@ A standard RS-232C serial cable should suffice.
 
 FreeBSD needs the RTS and CTS signals for flow control at speeds above 2400 bps, the CD signal to detect when a call has been answered or the line has been hung up, and the DTR signal to reset the modem after a session is complete.
 Some cables are wired without all of the needed signals, so if a login session does not go away when the line hangs up, there may be a problem with the cable.
-Refer to <<term-cables-null>> for more information about these signals.
+Refer to crossref:serialcomms[term-cables-null] for more information about these signals.
 
 Like other UNIX(R)-like operating systems, FreeBSD uses the hardware signals to find out when a call has been answered or a line has been hung up and to hangup and reset the modem after a call.
 FreeBSD avoids sending commands to the modem or watching for status reports from the modem.
@@ -689,7 +692,8 @@ vq|VH57600|Very High Speed Modem at 57600,8-bit:\
 
 For a slow CPU or a heavily loaded system without 16550A-based serial ports, this configuration may produce `uart` "silo" errors at 57.6 Kbps.
 
-The configuration of [.filename]#/etc/ttys# is similar to <<ex-etc-ttys>>, but a different argument is passed to `getty` and `dialup` is used for the terminal type.
+The configuration of [.filename]#/etc/ttys# is similar to
+crossref:serialcomms[ex-etc-ttys], but a different argument is passed to `getty` and `dialup` is used for the terminal type.
 Replace _xxx_ with the process `init` will run on the device:
 
 [.programlisting]
@@ -1012,7 +1016,7 @@ This section provides a more detailed explanation of the steps needed to setup a
 . Prepare a serial cable.
 +
 Use either a null-modem cable or a standard serial cable and a null-modem adapter.
-See <<term-cables-null>> for a discussion on serial cables.
+See crossref:serialcomms[term-cables-null] for a discussion on serial cables.
 . Unplug the keyboard.
 +
 Many systems probe for the keyboard during the Power-On Self-Test (POST) and will generate an error if the keyboard is not detected.
@@ -1162,7 +1166,8 @@ At the moment, the boot loader has no option equivalent to `-P` in the boot bloc
 [TIP]
 ====
 While it is not required, it is possible to provide a `login` prompt over the serial line.
-To configure this, edit the entry for the serial port in [.filename]#/etc/ttys# using the instructions in <<term-config>>.
+To configure this, edit the entry for the serial port in [.filename]#/etc/ttys#
+using the instructions in crossref:serialcomms[term-config].
 If the speed of the serial port has been changed, change `std.115200` to match the new setting.
 ====
 
