--- a/documentation/content/en/books/handbook/wine/_index.adoc
+++ b/documentation/content/en/books/handbook/wine/_index.adoc
@@ -98,7 +98,7 @@ WINE is a complex system, so before running it on a FreeBSD system it is worth g
 [[what-is-wine]]
 === What is WINE?
 
-As mentioned in the <<wine-synopsis,Synopsis>> for this chapter, WINE is a compatibility layer that allows Windows(R) applications to run on other operating systems.
+As mentioned in the crossref:wine[wine-synopsis,Synopsis] for this chapter, WINE is a compatibility layer that allows Windows(R) applications to run on other operating systems.
 In theory, it means these programs should run on systems like FreeBSD, macOS, and Android.
 
 When WINE runs a Windows(R) executable, two things occur:
@@ -162,7 +162,8 @@ While Steam does not offer a native FreeBSD client, there are several options fo
 In addition to proprietary offerings, other projects have released applications designed to work in tandem with the standard, open source version of WINE.
 The goals for these can range from making installation easier to offering easy ways to get popular software installed.
 
-These solutions are covered in greater detail in the later section on <<wine-management-guis,GUI frontends>>, and include the following:
+These solutions are covered in greater detail in the later section on
+crossref:wine[wine-management-guis,GUI frontends], and include the following:
 
 * winetricks
 * Mizutamari
@@ -173,7 +174,15 @@ These solutions are covered in greater detail in the later section on <<wine-man
 For FreeBSD users, some alternatives to using WINE are as follows:
 
 * Dual-Booting: A straightforward option is to run desired Windows(R) applications natively on that OS. This of course means exiting FreeBSD in order to boot Windows(R), so this method is not feasible if access to programs in both systems is required simultaneously.
-* Virtual Machines: Virtual Machines (VMs), as mentioned earlier in this chapter, are software processes that emulate full sets of hardware, on which additional operating systems (including Windows(R)) can be installed and run. Modern tools make VMs easy to create and manage, but this method comes at a cost. A good portion of the host systems resources must be allocated to each VM, and those resources cannot be reclaimed by the host as long as the VM is running. A few examples of VM managers include the open source solutions qemu, bhyve, and VirtualBox. See the chapter on <<virtualization,Virtualization>> for more detail.
+* Virtual Machines: Virtual Machines (VMs), as mentioned earlier in this
+  chapter, are software processes that emulate full sets of hardware, on which
+  additional operating systems (including Windows(R)) can be installed and run.
+  Modern tools make VMs easy to create and manage, but this method comes at a
+  cost. A good portion of the host systems resources must be allocated to each
+  VM, and those resources cannot be reclaimed by the host as long as the VM is
+  running. A few examples of VM managers include the open source solutions qemu,
+  bhyve, and VirtualBox. See the chapter on
+  crossref:virtualization[virtualization,Virtualization] for more detail.
 * Remote Access: Like many other UNIX(R)-like systems, FreeBSD can run a variety of applications enabling users to remotely access Windows(R) computers and use their programs or data. In addition to clients such as xrdp that connect to the standard Windows(R) Remote Desktop Protocol, other open source standards such as vnc can also be used (provided a compatible server is present on the other side).
 
 [[installing-wine-on-freebsd]]
