--- a/documentation/content/en/books/porters-handbook/flavors/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/flavors/_index.adoc
@@ -119,7 +119,8 @@ nox11_PKGNAMESUFFIX=	-nox11
 .More Complex Flavors Usage
 [example]
 ====
-Here is a slightly edited excerpt of what is present in package:devel/libpeas[], a port that uses the <<flavors-auto-python,Python flavors>>.
+Here is a slightly edited excerpt of what is present in package:devel/libpeas[],
+a port that uses the crosref:flavors[flavors-auto-python,Python flavors].
 With the default Python 2 and 3 versions being 2.7 and 3.6, it will automatically get `FLAVORS=py27 py36`
 
 [.programlisting]
@@ -154,7 +155,9 @@ To guard against `FLAVOR` being empty, which would cause a man:make[1] error, us
 The Gnome Python gobject3 bindings have two different names, one for Python 2, pygobject3 and one for Python 3, py3gobject3.
 The `configure` script has to run in [.filename]#${WRKSRC}#, but we are only interested in building and installing the Python 2 or Python 3 parts of the software, so set the build and install base directories appropriately.
 Hint about the correct Python 3 config script path name.
-The packing list is different when the built with Python 3. As there are three possible Python 3 versions, set `PLIST` for all three using the <<flavors-using-helpers,helper>>.
+The packing list is different when the built with Python 3. As there are three
+possible Python 3 versions, set `PLIST` for all three using the
+crosref:flavors[flavors-using-helpers,helper].
 ====
 
 [[flavors-using-helpers]]
