--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -72,13 +72,14 @@ The first part of the port's [.filename]#Makefile# names the port, describes its
 === `PORTNAME`
 
 Set `PORTNAME` to the base name of the software.
-It is used as the base for the FreeBSD package, and for <<makefile-distname,`DISTNAME`>>.
+It is used as the base for the FreeBSD package, and for crossref:makefiles[makefile-distname,`DISTNAME`].
 
 [IMPORTANT]
 ====
 The package name must be unique across the entire ports tree.
 Make sure that the `PORTNAME` is not already in use by an existing port, and that no other port already has the same `PKGBASE`.
-If the name has already been used, add either <<porting-pkgnameprefix-suffix,`PKGNAMEPREFIX` or `PKGNAMESUFFIX`>>.
+If the name has already been used, add either
+crossref:makefiles[porting-pkgnameprefix-suffix,`PKGNAMEPREFIX` or `PKGNAMESUFFIX`].
 ====
 
 [[makefile-versions]]
@@ -100,7 +101,7 @@ From time to time, some software will use a version scheme that is not compatibl
 [TIP]
 ====
 When updating a port, it is possible to use man:pkg-version[8]'s `-t` argument to check if the new version is greater or lesser than before.
-See <<makefile-versions-ex-pkg-version>>.
+See crossref:makefiles[makefile-versions-ex-pkg-version].
 ====
 
 [[makefile-versions-ex-pkg-version]]
@@ -278,7 +279,10 @@ man:pkg-version[8] will verify this:
 <.> `1.2` is before `1.2p4`, which is what was needed.
 ====
 
-For some more advanced examples of setting `PORTVERSION`, when the software's versioning is really not compatible with FreeBSD's, or `DISTNAME` when the distribution file does not contain the version itself, see <<makefile-distname>>.
+For some more advanced examples of setting `PORTVERSION`, when the software's
+versioning is really not compatible with FreeBSD's, or `DISTNAME` when the
+distribution file does not contain the version itself, see
+crossref:makefiles[makefile-distname].
 
 [[makefile-naming-revepoch]]
 === `PORTREVISION` and `PORTEPOCH`
@@ -290,7 +294,8 @@ For some more advanced examples of setting `PORTVERSION`, when the software's ve
 Changes to `PORTREVISION` are used by automated tools like man:pkg-version[8] to determine that a new package is available.
 
 `PORTREVISION` must be increased each time a change is made to the port that changes the generated package in any way.
-That includes changes that only affect a package built with non-default <<makefile-options,options>>.
+That includes changes that only affect a package built with non-default
+crossref:makefiles[makefile-options,options].
 
 Examples of when `PORTREVISION` must be bumped:
 
@@ -416,7 +421,7 @@ Remember, this is the whole point of `PORTEPOCH` in the first place.
 === `PKGNAMEPREFIX` and `PKGNAMESUFFIX`
 
 Two optional variables, `PKGNAMEPREFIX` and `PKGNAMESUFFIX`, are combined with `PORTNAME` and `PORTVERSION` to form `PKGNAME` as `${PKGNAMEPREFIX}${PORTNAME}${PKGNAMESUFFIX}-${PORTVERSION}`.
-Make sure this conforms to our <<porting-pkgname,guidelines for a good package name>>.
+Make sure this conforms to our crossref:makefiles[porting-pkgname,guidelines for a good package name].
 In particular, the use of a hyphen (`-`) in `PORTVERSION` is _not_ allowed.
 Also, if the package name has the _language-_ or the _-compiled.specifics_ part (see below), use `PKGNAMEPREFIX` and `PKGNAMESUFFIX`, respectively.
 Do not make them part of `PORTNAME`.
@@ -454,7 +459,8 @@ There is a tradition of naming `Perl 5` modules by prepending `p5-` and converti
 For example, the `Data::Dumper` module becomes `p5-Data-Dumper`.
 [[porting-pkgname-compiled-specifics]]
 [.filename]#-compiled.specifics#::
-If the port can be built with different <<makefile-masterdir,hardcoded defaults>> (usually part of the directory name in a family of ports), the _-compiled.specifics_ part states the compiled-in defaults.
+If the port can be built with different
+crossref:makefiles[makefile-masterdir,hardcoded defaults] (usually part of the directory name in a family of ports), the _-compiled.specifics_ part states the compiled-in defaults.
 The hyphen is optional.
 Examples are paper size and font units.
 +
@@ -474,7 +480,9 @@ It is important to prefix the version with a letter, here `d` (for date), in cas
 
 [IMPORTANT]
 ====
-Package name must be unique among all of the ports tree, check that there is not already a port with the same `PORTNAME` and if there is add one of <<porting-pkgnameprefix-suffix,`PKGNAMEPREFIX` or `PKGNAMESUFFIX`>>.
+Package name must be unique among all of the ports tree, check that there is not
+already a port with the same `PORTNAME` and if there is add one of
+crossref:makefiles[porting-pkgnameprefix-suffix,`PKGNAMEPREFIX` or `PKGNAMESUFFIX`].
 ====
 
 Here are some (real) examples on how to convert the name as called by the software authors to a suitable package name, for each line, only one of `DISTVERSION` or `PORTVERSION` is set in, depending on which would be used in the port's [.filename]#Makefile#:
@@ -613,11 +621,11 @@ Here, `d` here stands for date, if the source is a Git repository, `g` followed 
 When a package is created, it is put under [.filename]#/usr/ports/packages/All# and links are made from one or more subdirectories of [.filename]#/usr/ports/packages#.
 The names of these subdirectories are specified by the variable `CATEGORIES`.
 It is intended to make life easier for the user when he is wading through the pile of packages on the FTP site or the CDROM.
-Please take a look at the <<porting-categories,current list of categories>> and pick the ones that are suitable for the port.
+Please take a look at the crossref:makefiles[porting-categories,current list of categories] and pick the ones that are suitable for the port.
 
 This list also determines where in the ports tree the port is imported.
 If there is more than one category here, the port files must be put in the subdirectory with the name of the first category.
-See <<choosing-categories,below>> for more discussion about how to pick the right categories.
+See crossref:makefiles[choosing-categories,below] for more discussion about how to pick the right categories.
 
 [[porting-categories]]
 === Current List of Categories
@@ -1030,7 +1038,8 @@ As many of the categories overlap, choosing which of the categories will be the 
 There are several rules that govern this issue.
 Here is the list of priorities, in decreasing order of precedence:
 
-* The first category must be a physical category (see <<porting-categories,above>>). This is necessary to make the packaging work. Virtual categories and physical categories may be intermixed after that.
+* The first category must be a physical category (see
+  crossref:makefiles[porting-categories,above]). This is necessary to make the packaging work. Virtual categories and physical categories may be intermixed after that.
 * Language specific categories always come first. For example, if the port installs Japanese X11 fonts, then the `CATEGORIES` line would read [.filename]#japanese x11-fonts#.
 * Specific categories are listed before less-specific ones. For instance, an HTML editor is listed as [.filename]#www editors#, not the other way around. Also, do not list [.filename]#net# when the port belongs to any of [.filename]#irc#, [.filename]#mail#, [.filename]#news#, [.filename]#security#, or [.filename]#www#, as [.filename]#net# is included implicitly.
 * [.filename]#x11# is used as a secondary category only when the primary category is a natural language. In particular, do not put [.filename]#x11# in the category line for X applications.
@@ -1203,7 +1212,8 @@ DISTNAME=       ${PORTNAME}-1999-06-20
 .Exotic Case 2
 [example]
 ====
-In package:comms/librs232[], the distribution file is not versioned, so using <<makefile-dist_subdir,`DIST_SUBDIR`>> is needed:
+In package:comms/librs232[], the distribution file is not versioned, so using
+crossref:makefiles[makefile-dist_subdir,`DIST_SUBDIR`] is needed:
 
 [.programlisting]
 ....
@@ -1470,7 +1480,9 @@ These variables are available:
 |`${DISTVERSIONPREFIX}${DISTVERSION}${DISTVERSIONSUFFIX}`
 
 |`GH_SUBDIR`
-|When the software needs an additional distribution file to be extracted within `${WRKSRC}`, this variable can be used. See the examples in <<makefile-master_sites-github-multiple>> for more information.
+|When the software needs an additional distribution file to be extracted within
+`${WRKSRC}`, this variable can be used. See the examples in
+crossref:makefiles[makefile-master_sites-github-multiple] for more information.
 |(none)
 
 |`GH_TUPLE`
@@ -1564,7 +1576,8 @@ USE_GITHUB=	yes
 GH_TAGNAME=	c472d66b
 ....
 
-This creates a versioning scheme that increases over time, and that is still before version `0` (see <<makefile-versions-ex-pkg-version>> for details on man:pkg-version[8]):
+This creates a versioning scheme that increases over time, and that is still
+before version `0` (see crossref:makefiles[makefile-versions-ex-pkg-version] for details on man:pkg-version[8]):
 
 [source,shell]
 ....
@@ -1609,7 +1622,7 @@ USE_GITHUB=	yes
 ....
 
 This creates a versioning scheme that increases over time (well, over commits), and does not conflict with the creation of a `0.7.4` version.
-(See <<makefile-versions-ex-pkg-version>> for details on man:pkg-version[8]):
+(See crossref:makefiles[makefile-versions-ex-pkg-version] for details on man:pkg-version[8]):
 
 [source,shell]
 ....
@@ -1641,12 +1654,13 @@ v0.7.3-0-gc66c71d
 ==== Fetching Multiple Files from GitHub
 
 The `USE_GITHUB` framework also supports fetching multiple distribution files from different places in GitHub.
-It works in a way very similar to <<porting-master-sites-n>>.
+It works in a way very similar to crossref:makefiles[porting-master-sites-n].
 
 Multiple values are added to `GH_ACCOUNT`, `GH_PROJECT`, and `GH_TAGNAME`.
 Each different value is assigned a group.
 The main value can either have no group, or the `:DEFAULT` group.
-A value can be omitted if it is the same as the default as listed in <<makefile-master_sites-github-description>>.
+A value can be omitted if it is the same as the default as listed in
+crossref:makefiles[makefile-master_sites-github-description].
 
 `GH_TUPLE` can also be used when there are a lot of distribution files.
 It helps keep the account, project, tagname, and group information at the same place.
@@ -1662,7 +1676,9 @@ It is used as a unique key and using it more than once will overwrite the previo
 
 [NOTE]
 ====
-As this is only syntactic sugar above `DISTFILES` and `MASTER_SITES`, the group names must adhere to the restrictions on group names outlined in <<porting-master-sites-n>>
+As this is only syntactic sugar above `DISTFILES` and `MASTER_SITES`, the group
+names must adhere to the restrictions on group names outlined in
+crossref:makefiles[porting-master-sites-n]
 ====
 
 When fetching multiple files from GitHub, sometimes the default distribution file is not fetched from GitHub.
@@ -1735,7 +1751,8 @@ post-extract:
 [example]
 ====
 
-This is functionally equivalent to <<makefile-master_sites-github-multi>>, but using `GH_TUPLE`:
+This is functionally equivalent to
+crossref:makefiles[makefile-master_sites-github-multi], but using `GH_TUPLE`:
 
 [.programlisting]
 ....
@@ -1876,7 +1893,9 @@ Similar to GitHub, if the distribution file comes from https://gitlab.com/[gitla
 |`(none)`
 
 |`GL_SUBDIR`
-|When the software needs an additional distribution file to be extracted within `${WRKSRC}`, this variable can be used. See the examples in <<makefile-master_sites-gitlab-multiple>> for more information.
+|When the software needs an additional distribution file to be extracted within
+`${WRKSRC}`, this variable can be used. See the examples in
+	crossref:makefiles[makefile-master_sites-gitlab-multiple] for more information.
 |(none)
 
 |`GL_TUPLE`
@@ -1940,10 +1959,12 @@ It will have `MASTER_SITES` set to `"https://gitlab.example.com"` and `WRKSRC` t
 ==== Fetching Multiple Files from GitLab
 
 The `USE_GITLAB` framework also supports fetching multiple distribution files from different places from GitLab and GitLab hosted sites.
-It works in a way very similar to <<porting-master-sites-n>> and <<makefile-master_sites-gitlab-multiple>>.
+It works in a way very similar to crossref:makefiles[porting-master-sites-n] and
+crossref:makefiles[makefile-master_sites-gitlab-multiple].
 
 Multiple values are added to `GL_SITE`, `GL_ACCOUNT`, `GL_PROJECT` and `GL_COMMIT`.
-Each different value is assigned a group. <<makefile-master_sites-gitlab-description>>.
+Each different value is assigned a group.
+crossref:makefiles[makefile-master_sites-gitlab-description].
 
 `GL_TUPLE` can also be used when there are a lot of distribution files.
 It helps keep the site, account, project, commit, and group information at the same place.
@@ -1959,7 +1980,9 @@ It is used as a unique key and using it more than once will overwrite the previo
 
 [NOTE]
 ====
-As this is only syntactic sugar above `DISTFILES` and `MASTER_SITES`, the group names must adhere to the restrictions on group names outlined in <<porting-master-sites-n>>
+As this is only syntactic sugar above `DISTFILES` and `MASTER_SITES`, the group
+names must adhere to the restrictions on group names outlined in
+crossref:makefiles[porting-master-sites-n]
 ====
 
 When fetching multiple files using GitLab, sometimes the default distribution file is not fetched from a GitLab site.
@@ -1972,7 +1995,8 @@ USE_GITLAB=	nodefault
 
 [IMPORTANT]
 ====
-When using `USE_GITLAB=nodefault`, the [.filename]#Makefile# must set `DISTFILES` in its <<porting-order-portname,top block>>.
+When using `USE_GITLAB=nodefault`, the [.filename]#Makefile# must set
+`DISTFILES` in its crossref:makefiles[porting-order-portname,top block].
 The definition should be:
 
 [.programlisting]
@@ -2033,7 +2057,8 @@ post-extract:
 .Use of `USE_GITLAB` with Multiple Distribution Files Using `GL_TUPLE`
 [example]
 ====
-This is functionally equivalent to <<makefile-master_sites-gitlab-multi>>, but using `GL_TUPLE`:
+This is functionally equivalent to
+crossref:makefiles[makefile-master_sites-gitlab-multi], but using `GL_TUPLE`:
 
 [.programlisting]
 ....
@@ -2132,7 +2157,7 @@ If there are multiple patches and they need mixed values for the strip parameter
 PATCHFILES=	patch1 patch2:-p1
 ....
 
-This does not conflict with <<porting-master-sites-n,the master site grouping feature>>, adding a group also works:
+This does not conflict with crossref:makefiles[porting-master-sites-n,the master site grouping feature], adding a group also works:
 
 [.programlisting]
 ....
@@ -2190,7 +2215,8 @@ This is because, while man:make[1] is ok with variable names containing dashes, 
 This section explains how to quickly prepare fine grained fetching of multiple distribution files and patches from different sites and subdirectories.
 We describe here a case of simplified `MASTER_SITES:n` usage.
 This will be sufficient for most scenarios.
-More detailed information are available in <<ports-master-sites-n-detailed>>.
+More detailed information are available in
+crossref:makefiles[ports-master-sites-n-detailed].
 
 Some applications consist of multiple distribution files that must be downloaded from a number of different sites.
 For example, Ghostscript consists of the core of the program, and then a large number of driver files that are used depending on the user's printer.
@@ -2200,7 +2226,8 @@ To support this, each entry in `DISTFILES` may be followed by a colon and a "gro
 Each site listed in `MASTER_SITES` is then followed by a colon, and the group that indicates which distribution files are downloaded from this site.
 
 For example, consider an application with the source split in two parts, [.filename]#source1.tar.gz# and [.filename]#source2.tar.gz#, which must be downloaded from two different sites.
-The port's [.filename]#Makefile# would include lines like <<ports-master-sites-n-example-simple-use-one-file-per-site>>.
+The port's [.filename]#Makefile# would include lines like
+crossref:makefiles[ports-master-sites-n-example-simple-use-one-file-per-site].
 
 [[ports-master-sites-n-example-simple-use-one-file-per-site]]
 .Simplified Use of `MASTER_SITES:n` with One File Per Site
@@ -2219,7 +2246,8 @@ DISTFILES=	source1.tar.gz:source1 \
 
 Multiple distribution files can have the same group.
 Continuing the previous example, suppose that there was a third distfile, [.filename]#source3.tar.gz#, that is downloaded from `ftp.example2.com`.
-The [.filename]#Makefile# would then be written like <<ports-master-sites-n-example-simple-use-more-than-one-file-per-site>>.
+The [.filename]#Makefile# would then be written like
+crossref:makefiles[ports-master-sites-n-example-simple-use-more-than-one-file-per-site].
 
 [[ports-master-sites-n-example-simple-use-more-than-one-file-per-site]]
 .Simplified Use of `MASTER_SITES:n` with More Than One File Per Site
@@ -2246,12 +2274,18 @@ Okay, so the previous example did not reflect the new port's needs? In this sect
 +
 Moreover, string matching is case sensitive; that is, `n` is different from `N`.
 +
-However, these words cannot be used for postfixing purposes since they yield special meaning: `default`, `all` and `ALL` (they are used internally in item <<porting-master-sites-n-what-changes-in-port-targets, ii>>).
-Furthermore, `DEFAULT` is a special purpose word (check item <<porting-master-sites-n-DEFAULT-group,3>>).
+However, these words cannot be used for postfixing purposes since they yield
+special meaning: `default`, `all` and `ALL` (they are used internally in item
+crossref:makefiles[porting-master-sites-n-what-changes-in-port-targets, ii]).
+Furthermore, `DEFAULT` is a special purpose word (check item
+crossref:makefiles[porting-master-sites-n-DEFAULT-group,3]).
 . Elements postfixed with `:n` belong to the group `n`, `:m` belong to group `m` and so forth.
 +
 [[porting-master-sites-n-DEFAULT-group]]
-. Elements without a postfix are groupless, they all belong to the special group `DEFAULT`. Any elements postfixed with `DEFAULT`, is just being redundant unless an element belongs to both `DEFAULT` and other groups at the same time (check item <<porting-master-sites-n-comma-operator,5>>).
+. Elements without a postfix are groupless, they all belong to the special group
+  `DEFAULT`. Any elements postfixed with `DEFAULT`, is just being redundant
+  unless an element belongs to both `DEFAULT` and other groups at the same time
+  (check item crossref:makefiles[porting-master-sites-n-comma-operator,5]).
 +
 These examples are equivalent but the first one is preferred:
 +
@@ -2299,7 +2333,20 @@ MASTER_SITES=	alpha:DEFAULT,SOME_SITE
 +
 [[porting-master-sites-n-group-semantics]]
 . Group semantics can be used in any of the variables `MASTER_SITES`, `PATCH_SITES`, `MASTER_SITE_SUBDIR`, `PATCH_SITE_SUBDIR`, `DISTFILES`, and `PATCHFILES` according to this syntax:
-.. All `MASTER_SITES`, `PATCH_SITES`, `MASTER_SITE_SUBDIR` and `PATCH_SITE_SUBDIR` elements must be terminated with the forward slash `/` character. If any elements belong to any groups, the group postfix `:__n__` must come right after the terminator `/`. The `MASTER_SITES:n` mechanism relies on the existence of the terminator `/` to avoid confusing elements where a `:n` is a valid part of the element with occurrences where `:n` denotes group `n`. For compatibility purposes, since the `/` terminator was not required before in both `MASTER_SITE_SUBDIR` and `PATCH_SITE_SUBDIR` elements, if the postfix immediate preceding character is not a `/` then `:n` will be considered a valid part of the element instead of a group postfix even if an element is postfixed with `:n`. See both <<ports-master-sites-n-example-detailed-use-master-site-subdir>> and <<ports-master-sites-n-example-detailed-use-complete-example-master-sites>>.
+.. All `MASTER_SITES`, `PATCH_SITES`, `MASTER_SITE_SUBDIR` and
+   `PATCH_SITE_SUBDIR` elements must be terminated with the forward slash `/`
+   character. If any elements belong to any groups, the group postfix `:__n__`
+   must come right after the terminator `/`. The `MASTER_SITES:n` mechanism
+   relies on the existence of the terminator `/` to avoid confusing elements
+   where a `:n` is a valid part of the element with occurrences where `:n`
+   denotes group `n`. For compatibility purposes, since the `/` terminator was
+   not required before in both `MASTER_SITE_SUBDIR` and `PATCH_SITE_SUBDIR`
+   elements, if the postfix immediate preceding character is not a `/` then `:n`
+   will be considered a valid part of the element instead of a group postfix
+   even if an element is postfixed with `:n`. See both
+   crossref:makefiles[ports-master-sites-n-example-detailed-use-master-site-subdir]
+   and
+   crossref:makefiles[ports-master-sites-n-example-detailed-use-complete-example-master-sites].
 +
 [[ports-master-sites-n-example-detailed-use-master-site-subdir]]
 .Detailed Use of `MASTER_SITES:n` in `MASTER_SITE_SUBDIR`
@@ -2392,7 +2439,8 @@ Sites are listed in the exact order they will be used.
 . How do I group one of the special macros from [.filename]#bsd.sites.mk#, for example, SourceForge (`SF`)?
 +
 This has been simplified as much as possible.
-See <<ports-master-sites-n-example-detailed-use-master-site-sourceforge>>.
+See
+crossref:makefiles[ports-master-sites-n-example-detailed-use-master-site-sourceforge].
 +
 [[ports-master-sites-n-example-detailed-use-master-site-sourceforge]]
 .Detailed Use of `MASTER_SITES:n` with SourceForge (`SF`)
@@ -2409,7 +2457,9 @@ DISTFILES=	something.tar.gz:sourceforge
 ====
 . How do I use this with `PATCH*`?
 +
-All examples were done with `MASTER*` but they work exactly the same for `PATCH*` ones as can be seen in <<ports-master-sites-n-example-detailed-use-patch-sites>>.
+All examples were done with `MASTER*` but they work exactly the same for
+`PATCH*` ones as can be seen in
+crossref:makefiles[ports-master-sites-n-example-detailed-use-patch-sites].
 +
 [[ports-master-sites-n-example-detailed-use-patch-sites]]
 .Simplified Use of `MASTER_SITES:n` with `PATCH_SITES`
@@ -2428,18 +2478,26 @@ PATCHFILES=	patch1:test
 ==== What Does Change for Ports? What Does Not?
 
 [lowerroman]
-. All current ports remain the same. The `MASTER_SITES:n` feature code is only activated if there are elements postfixed with `:__n__` like elements according to the aforementioned syntax rules, especially as shown in item <<porting-master-sites-n-group-semantics, 7>>.
+. All current ports remain the same. The `MASTER_SITES:n` feature code is only
+  activated if there are elements postfixed with `:__n__` like elements
+  according to the aforementioned syntax rules, especially as shown in item
+  crossref:makefiles[porting-master-sites-n-group-semantics, 7].
 +
 [[porting-master-sites-n-what-changes-in-port-targets]]
 . The port targets remain the same: `checksum`, `makesum`, `patch`, `configure`, `build`, etc. With the obvious exceptions of `do-fetch`, `fetch-list`, `master-sites` and `patch-sites`.
 
-** `do-fetch`: deploys the new grouping postfixed `DISTFILES` and `PATCHFILES` with their matching group elements within both `MASTER_SITES` and `PATCH_SITES` which use matching group elements within both `MASTER_SITE_SUBDIR` and `PATCH_SITE_SUBDIR`. Check <<ports-master-sites-n-example-detailed-use-complete-example-master-sites>>.
+** `do-fetch`: deploys the new grouping postfixed `DISTFILES` and `PATCHFILES`
+   with their matching group elements within both `MASTER_SITES` and
+   `PATCH_SITES` which use matching group elements within both
+   `MASTER_SITE_SUBDIR` and `PATCH_SITE_SUBDIR`. Check
+   crossref:makefiles[ports-master-sites-n-example-detailed-use-complete-example-master-sites].
 ** `fetch-list`: works like old `fetch-list` with the exception that it groups just like `do-fetch`.
 ** `master-sites` and `patch-sites`: (incompatible with older versions) only return the elements of group `DEFAULT`; in fact, they execute targets `master-sites-default` and `patch-sites-default` respectively.
 +
 Furthermore, using target either `master-sites-all` or `patch-sites-all` is preferred to directly checking either `MASTER_SITES` or `PATCH_SITES`.
 Also, directly checking is not guaranteed to work in any future versions.
-Check item <<porting-master-sites-n-new-port-targets-master-sites-all, B>> for more information on these new port targets.
+Check item
+crossref:makefiles[porting-master-sites-n-new-port-targets-master-sites-all, B] for more information on these new port targets.
 
 . New port targets
 .. There are `master-sites-_n_` and `patch-sites-_n_` targets which will list the elements of the respective group _n_ within `MASTER_SITES` and `PATCH_SITES` respectively. For instance, both `master-sites-DEFAULT` and `patch-sites-DEFAULT` will return the elements of group `DEFAULT`, `master-sites-test` and `patch-sites-test` of group `test`, and thereon.
@@ -2564,12 +2622,13 @@ If it is not an OSI approved license it must also document any restrictions on r
 
 A short name for the license or licenses if more than one license apply.
 
-If it is one of the licenses listed in <<licenses-license-list>>, only `LICENSE_FILE` and `LICENSE_DISTFILES` variables can be set.
+If it is one of the licenses listed in crossref:makefiles[licenses-license-list], only `LICENSE_FILE` and `LICENSE_DISTFILES` variables can be set.
 
-If this is a license that has not been defined in the ports framework (see <<licenses-license-list>>), the `LICENSE_PERMS` and `LICENSE_NAME` must be set, along with either `LICENSE_FILE` or `LICENSE_TEXT`.
+If this is a license that has not been defined in the ports framework (see
+crossref:makefiles[licenses-license-list]), the `LICENSE_PERMS` and `LICENSE_NAME` must be set, along with either `LICENSE_FILE` or `LICENSE_TEXT`.
 `LICENSE_DISTFILES` and `LICENSE_GROUPS` can also be set, but are not required.
 
-The predefined licenses are shown in <<licenses-license-list>>.
+The predefined licenses are shown in crossref:makefiles[licenses-license-list].
 The current list is always available in [.filename]#Mk/bsd.licenses.db.mk#.
 
 [[licenses-license-ex1]]
@@ -3240,7 +3299,8 @@ LICENSE_PERMS=  dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 === `LICENSE_FILE` and `LICENSE_FILE_NAME`
 
 Full path to the file containing the license text, usually [.filename]#${WRKSRC}/some/file#.
-If the file is not in the distfile, and its content is too long to be put in <<licenses-license_text,`LICENSE_TEXT`>>, put it in a new file in [.filename]#${FILESDIR}#.
+If the file is not in the distfile, and its content is too long to be put in
+crossref:makefiles[licenses-license_text,`LICENSE_TEXT`], put it in a new file in [.filename]#${FILESDIR}#.
 
 [[licenses-license_file-ex1]]
 .`LICENSE_FILE`
@@ -3705,7 +3765,8 @@ That process can be quite slow on older machines, but it may be able to save a l
 [[makefile-automatic-dependencies]]
 === Problems Caused by Automatic Dependencies
 
-Dependencies must be declared either explicitly or by using the <<makefile-options,OPTIONS framework>>.
+Dependencies must be declared either explicitly or by using the
+crossref:makefiles[makefile-options,OPTIONS framework].
 Using other methods like automatic detection complicates indexing, which causes problems for port and package management.
 
 [[makefile-automatic-dependencies-bad]]
@@ -3755,7 +3816,8 @@ Simple scripts can then be used to automate the building, installation, and upda
 If the port needs to build slightly different versions of packages by having a variable (for instance, resolution, or paper size) take different values, create one subdirectory per package to make it easier for users to see what to do, but try to share as many files as possible between ports.
 Typically, by using variables cleverly, only a very short [.filename]#Makefile# is needed in all but one of the directories.
 In the sole [.filename]#Makefile#, use `MASTERDIR` to specify the directory where the rest of the files are.
-Also, use a variable as part of <<porting-pkgname,`PKGNAMESUFFIX`>> so the packages will have different names.
+Also, use a variable as part of
+crossref:makefiles[porting-pkgname,`PKGNAMESUFFIX`] so the packages will have different names.
 
 This will be best demonstrated by an example.
 This is part of [.filename]#print/pkfonts300/Makefile#;
@@ -4106,53 +4168,58 @@ There are some macros to help simplify conditional values which differ based on 
 For easier access, a comprehensive list is provided:
 
 `PLIST_SUB`, `SUB_LIST`::
-For automatic `%%_OPT_%%` and `%%NO__OPT__%%` generation, see <<options_sub>>.
+For automatic `%%_OPT_%%` and `%%NO__OPT__%%` generation, see crossref:makefiles[options_sub].
 +
-For more complex usage, see <<options-variables>>.
+For more complex usage, see crossref:makefiles[options-variables].
 
 `CONFIGURE_ARGS`::
-For `--enable-_x_` and `--disable-_x_`, see <<options-configure_enable>>.
+For `--enable-_x_` and `--disable-_x_`, see crossref:makefiles[options-configure_enable].
 +
-For `--with-_x_` and `--without-_x_`, see <<options-configure_with>>.
+For `--with-_x_` and `--without-_x_`, see crossref:makefiles[options-configure_with].
 +
-For all other cases, see <<options-configure_on>>.
+For all other cases, see crossref:makefiles[options-configure_on].
 
 `CMAKE_ARGS`::
-For arguments that are booleans (`on`, `off`, `true`, `false`, `0`, `1`) see <<options-cmake_bool>>.
+For arguments that are booleans (`on`, `off`, `true`, `false`, `0`, `1`) see
+crossref:makefiles[options-cmake_bool].
 +
-For all other cases, see <<options-cmake_on>>.
+For all other cases, see crossref:makefiles[options-cmake_on].
 
 `MESON_ARGS`::
-For arguments that take `true` or `false`, see <<options-meson_true>>.
+For arguments that take `true` or `false`, see crossref:makefiles[options-meson_true].
 +
-For arguments that take `yes` or `no`, use <<options-meson_yes>>.
+For arguments that take `yes` or `no`, use crossref:makefiles[options-meson_yes].
 +
-For arguments that take `enabled` or `disabled`, see <<options-meson_enabled>>.
+For arguments that take `enabled` or `disabled`, see crossref:makefiles[options-meson_enabled].
 +
-For all other cases, use <<options-meson_on>>.
+For all other cases, use crossref:makefiles[options-meson_on].
 
 `QMAKE_ARGS`::
-See <<options-qmake_on>>.
+See crossref:makefiles[options-qmake_on].
 
 `USE_*`::
-See <<options-use>>.
+See crossref:makefiles[options-use].
 
 `*_DEPENDS`::
-See <<options-dependencies>>.
+See crossref:makefiles[options-dependencies].
 
 `*` (Any variable)::
-The most used variables have direct helpers, see <<options-variables>>.
+The most used variables have direct helpers, see
+crossref:makefiles[options-variables].
 +
-For any variable without a specific helper, see <<options-vars>>.
+For any variable without a specific helper, see crossref:makefiles[options-vars].
 
 Options dependencies::
-When an option need another option to work, see <<options-implies>>.
+When an option need another option to work, see
+crossref:makefiles[options-implies].
 
 Options conflicts::
-When an option cannot work if another is also enabled, see <<options-prevents>>.
+When an option cannot work if another is also enabled, see
+crossref:makefiles[options-prevents].
 
 Build targets::
-When an option need some extra processing, see <<options-targets>>.
+When an option need some extra processing, see
+crossref:makefiles[options-targets].
 
 [[options_sub]]
 ==== `OPTIONS_SUB`
@@ -4329,7 +4396,8 @@ CONFIGURE_ARGS+=	--no-test
 
 [TIP]
 ====
-Most of the time, the helpers in <<options-configure_enable>> and <<options-configure_with>> provide a shorter and more comprehensive functionality.
+Most of the time, the helpers in crossref:makefiles[options-configure_enable]
+and crossref:makefiles[options-configure_with] provide a shorter and more comprehensive functionality.
 ====
 
 [[options-cmake-helpers]]
@@ -4366,7 +4434,7 @@ CMAKE_ARGS+=	-DOPTIMIZE:BOOL=true
 [TIP]
 ====
 
-See <<options-cmake_bool>> for a shorter helper when the value is boolean.
+See crossref:makefiles[options-cmake_bool] for a shorter helper when the value is boolean.
 ====
 
 [[options-cmake_bool]]
@@ -4562,7 +4630,7 @@ QMAKE_ARGS+=	-DPRODUCTION:BOOL=true
 Provides a way to add dependencies between options.
 
 When _OPT_ is selected, all the options listed in this variable will be selected too.
-Using the <<options-configure_enable,`OPT_CONFIGURE_ENABLE`>> described earlier to illustrate:
+Using the crossref:makefiles[options-configure_enable,`OPT_CONFIGURE_ENABLE`] described earlier to illustrate:
 
 [.programlisting]
 ....
@@ -4675,7 +4743,8 @@ Provides a generic way to set and append to variables.
 
 [WARNING]
 ====
-Before using `OPT_VARS` and `OPT_VARS_OFF`, see if there is already a more specific helper available in <<options-variables>>.
+Before using `OPT_VARS` and `OPT_VARS_OFF`, see if there is already a more
+specific helper available in crossref:makefiles[options-variables].
 ====
 
 When option _OPT_ is selected, and `OPT_VARS` defined, `_key_=_value_` and `_key_+=_value_` pairs are evaluated from `OPT_VARS`.
@@ -5235,7 +5304,8 @@ post-install:
 
 These macros do not add the installed files to [.filename]#pkg-plist#.
 They must be added manually.
-For optional documentation (`PORTDOCS`, see <<install-documentation>>) and examples (`PORTEXAMPLES`), the `%%PORTDOCS%%` or `%%PORTEXAMPLES%%` prefixes must be prepended in [.filename]#pkg-plist#.
+For optional documentation (`PORTDOCS`, see
+crossref:makefiles[install-documentation]) and examples (`PORTEXAMPLES`), the `%%PORTDOCS%%` or `%%PORTEXAMPLES%%` prefixes must be prepended in [.filename]#pkg-plist#.
 
 [[install-documentation]]
 === Install Additional Documentation
@@ -5259,7 +5329,7 @@ post-install:
 ....
 
 On the other hand, if there is a DOCS option in the port, install the documentation in a `post-install-DOCS-on` target.
-These targets are described in <<options-targets>>.
+These targets are described in crossref:makefiles[options-targets].
 
 Here are some handy variables and how they are expanded by default when used in the [.filename]#Makefile#:
 
