--- a/documentation/content/en/books/porters-handbook/plist/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/plist/_index.adoc
@@ -159,7 +159,7 @@ If the port installs configuration files to [.filename]#PREFIX/etc# (or elsewher
 That will cause `pkg delete` to remove files that have been carefully edited by the user, and a re-installation will wipe them out.
 
 Instead, install sample files with a [.filename]#filename.sample# extension.
-The `@sample` macro automates this, see <<plist-keywords-sample>> for what it does exactly.
+The `@sample` macro automates this, see crossref:plist[plist-keywords-sample] for what it does exactly.
 For each sample file, add a line to [.filename]#pkg-plist#:
 
 [.programlisting]
@@ -216,7 +216,8 @@ First, make sure the port is almost complete, with only [.filename]#pkg-plist# m
 Running `make makeplist` will show an example for [.filename]#pkg-plist#.
 The output of `makeplist` must be double checked for correctness as it tries to automatically guess a few things, and can get it wrong.
 
-User configuration files should be installed as [.filename]#filename.sample#, as it is described in <<plist-config>>.
+User configuration files should be installed as [.filename]#filename.sample#, as
+it is described in crossref:plist[plist-config].
 [.filename]#info/dir# must not be listed and appropriate [.filename]#install-info# lines must be added as noted in the crossref:makefiles[makefile-info,info files] section.
 Any libraries installed by the port must be listed as specified in the crossref:special[porting-shlibs,shared libraries]  section.
 
@@ -379,7 +380,7 @@ The "actual", non-sample, file is either the second filename, if present, or the
 This does three things. First, add the first file passed as argument, the sample file, to the plist.
 Then, on installation, if the actual file is not found, copy the sample file to the actual file.
 And finally, on deinstallation, remove the actual file if it has not been modified.
-See <<plist-config>> for more information.
+See crossref:plist[plist-config] for more information.
 
 [[plist-keywords-shared-mime-info]]
 === `@shared-mime-info` _directory_
@@ -502,7 +503,7 @@ For example, [.filename]#/var/db/${PORTNAME}# needs to have a `@dir` entry where
 ==== `@exec` _command_, `@unexec` _command_ (Deprecated)
 
 Execute _command_ as part of the installation or deinstallation process.
-Please use <<plist-keywords-base-exec>> instead.
+Please use crossref:plist[plist-keywords-base-exec] instead.
 
 [[plist-keywords-base-dirrm]]
 ==== `@dirrm` _directory_ (Deprecated)
@@ -600,7 +601,7 @@ some.content
 other.content
 ....
 
-It also affects how the <<plist-keywords-action,`action`>> entry works.
+It also affects how the crossref:plist[plist-keywords-action,`action`] entry works.
 When there is more than one argument, the argument number must be specified.
 For example:
 
@@ -613,7 +614,8 @@ actions: [file(1)]
 ==== `pre-install`, `post-install`, `pre-deinstall`, `post-deinstall`, `pre-upgrade`, `post-upgrade`
 
 These keywords contains a man:sh[1] script to be executed before or after installation, deinstallation, or upgrade of the package.
-In addition to the usual `@exec %_foo_` placeholders described in <<plist-keywords-base-exec>>, there is a new one, `%@`, which represents the argument of the keyword.
+In addition to the usual `@exec %_foo_` placeholders described in
+crossref:plist[plist-keywords-base-exec], there is a new one, `%@`, which represents the argument of the keyword.
 
 [[plist-keywords-examples]]
 ==== Custom Keyword Examples
