--- a/documentation/content/en/books/porters-handbook/testing/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/testing/_index.adoc
@@ -122,7 +122,8 @@ pass:[<!-- vale Vale.Terms = YES -->]
 The package:ports-mgmt/porttools[] program is part of the Ports Collection.
 
 `port` is the front-end script, which can help simplify the testing job.
-Whenever a new port or an update to an existing one needs testing, use `port test` to test the port, including the <<testing-portlint,`portlint`>> checking.
+Whenever a new port or an update to an existing one needs testing, use `port
+test` to test the port, including the crossref:testing[testing-portlint,`portlint`] checking.
 This command also detects and lists any files that are not listed in [.filename]#pkg-plist#.
 For example:
 
@@ -191,7 +192,7 @@ The path with `LOCALBASE` is more likely to still work if the system administrat
 ====
 All these tests are done automatically when running `poudriere testport` or `poudriere bulk -t`.
 It is highly recommended that every ports contributor install and test their ports with it.
-See <<testing-poudriere>> for more information.
+See crossref:testing[testing-poudriere] for more information.
 ====
 
 [[testing-poudriere]]
@@ -441,7 +442,8 @@ Will update the given _PORTSTREE_, one tree given by the output of `poudriere -l
 
 [NOTE]
 ====
-Ports trees without a method, see <<testing-poudriere-ports-tree-manual>>, cannot be updated like this and must be updated manually by the porter.
+Ports trees without a method, see
+crossref:testing[testing-poudriere-ports-tree-manual], cannot be updated like this and must be updated manually by the porter.
 ====
 
 [[testing-poudriere-testing-ports]]
@@ -508,7 +510,8 @@ Adding the `-c`:
 
 Presents the port configuration dialog before the port is built.
 The ports given after `-o` in the format `_category_/_portname_` will use the specified options, all dependencies will use the default options.
-Testing dependent ports with non-default options can be accomplished using sets, see <<testing-poudriere-sets>>.
+Testing dependent ports with non-default options can be accomplished using sets,
+see crossref:testing[testing-poudriere-sets].
 
 [TIP]
 ====
