--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -360,7 +360,7 @@ Possible arguments: (none)
 
 Uses update-desktop-database from package:devel/desktop-file-utils[].
 An extra post-install step will be run without interfering with any post-install steps already in the port [.filename]#Makefile#.
-A line with <<plist-keywords-desktop-file-utils,`@desktop-file-utils`>> will be added to the plist.
+A line with crossref:plist[plist-keywords-desktop-file-utils,`@desktop-file-utils`] will be added to the plist.
 Only use this macro if the port provides a `.desktop` file which contains a
 `MimeType` entry.
 
@@ -535,7 +535,8 @@ This implies `USES=ruby`.
 Possible arguments: (none)
 
 Deprecated.
-Will include both <<uses-gettext-runtime,`gettext-runtime`>> and <<uses-gettext-tools,`gettext-tools`>>.
+Will include both crossref:uses[uses-gettext-runtime,`gettext-runtime`] and
+crossref:uses[uses-gettext-tools,`gettext-tools`].
 
 [[uses-gettext-runtime]]
 == `gettext-runtime`
@@ -1412,7 +1413,7 @@ Look for [.filename]#Makefile.in# and [.filename]#configure# in `PATHFIX_WRKSRC`
 For example, it fixes the installation directory of `pkgconfig`'s [.filename]#.pc# files to [.filename]#${PREFIX}/libdata/pkgconfig#.
 If the port uses `USES=autoreconf`, [.filename]#Makefile.am# will be added to `PATHFIX_MAKEFILEIN` automatically.
 
-If the port <<uses-cmake,`USES=cmake`>> it will look for [.filename]#CMakeLists.txt# in `PATHFIX_WRKSRC`.
+If the port crossref:uses[uses-cmake,`USES=cmake`] it will look for [.filename]#CMakeLists.txt# in `PATHFIX_WRKSRC`.
 If needed, that default filename can be changed with `PATHFIX_CMAKELISTSTXT`.
 
 [[uses-pear]]
@@ -1509,7 +1510,8 @@ Enables flavors.
 
 `flavors`::
 Enable automatic crossref:flavors[flavors-auto-php,PHP flavors] generation.
-Flavors will be generated for all PHP versions, except the ones present in <<uses-php-ignore,`IGNORE_WITH_PHP`>>.
+Flavors will be generated for all PHP versions, except the ones present in
+crossref:uses[uses-php-ignore,`IGNORE_WITH_PHP`].
 
 `noflavors`::
 Disable automatic PHP flavors generation.
@@ -1693,7 +1695,7 @@ If Python is also needed during the patch phase, use `patch`.
 See crossref:special[using-python, Using Python] for more information.
 
 `USES=python:env` can be used when the variables exported by the framework are needed but a dependency on Python is not.
-It can happen when using with <<uses-shebangfix,`USES=shebangfix`>>, and the goal is only to fix the shebangs but not add a dependency on Python.
+It can happen when using with crossref:uses[uses-shebangfix,`USES=shebangfix`], and the goal is only to fix the shebangs but not add a dependency on Python.
 
 [[uses-qmail]]
 == `qmail`
@@ -1879,17 +1881,17 @@ The shebangfix macro fixes shebang lines in scripts listed in `SHEBANG_REGEX`, `
 
 `SHEBANG_REGEX`::
 Contains _one_ extended regular expressions, and is used with the `-iregex` argument of man:find[1].
-See <<uses-shebangfix-ex-regex>>.
+See crossref:uses[uses-shebangfix-ex-regex].
 
 `SHEBANG_GLOB`::
 Contains a list of patterns used with the `-name` argument of man:find[1].
-See <<uses-shebangfix-ex-glob>>.
+See crossref:uses[uses-shebangfix-ex-glob].
 
 `SHEBANG_FILES`::
 Contains a list of files or man:sh[1] globs.
 The shebangfix macro is run from `${WRKSRC}`, so `SHEBANG_FILES` can contain paths that are relative to `${WRKSRC}`.
 It can also deal with absolute paths if files outside of `${WRKSRC}` require patching.
-See <<uses-shebangfix-ex-files>>.
+See crossref:uses[uses-shebangfix-ex-files].
 
 Currently Bash, Java, Ksh, Lua, Perl, PHP, Python, Ruby, Tcl, and Tk are supported by default.
 
@@ -1916,7 +1918,7 @@ These will _always_ be part of `_interp__OLD_CMD`: `"/usr/bin/env _interp_" /bin
 ====
 `_interp__OLD_CMD` contain multiple values.
 Any entry with spaces must be quoted.
-See <<uses-shebangfix-ex-ksh>>.
+See crossref:uses[uses-shebangfix-ex-ksh].
 ====
 
 [IMPORTANT]
@@ -1929,7 +1931,7 @@ Correct paths for supported interpreters are available in `_interp__CMD`.
 
 [TIP]
 ====
-When used with <<uses-python,`USES=python`>>, and the aim is only to fix the shebangs but a dependency on Python itself is not wanted, use `USES=python:env` instead.
+When used with crossref:uses[uses-python,`USES=python`], and the aim is only to fix the shebangs but a dependency on Python itself is not wanted, use `USES=python:env` instead.
 ====
 
 [[uses-shebangfix-ex-lua]]
@@ -2167,7 +2169,7 @@ The same variables are returned as when using Tcl.
 Possible arguments: (none)
 
 Changes some default behavior (mostly variables) of the build system to allow installing this port as a normal user.
-Try this in the port before using <<uses-fakeroot,USES=fakeroot>> or patching.
+Try this in the port before using crossref:uses[uses-fakeroot,USES=fakeroot] or patching.
 
 [[uses-uniquefiles]]
 == `uniquefiles`
