--- a/documentation/content/en/articles/freebsd-releng/_index.adoc
+++ b/documentation/content/en/articles/freebsd-releng/_index.adoc
@@ -88,28 +88,28 @@ This article will highlight the workflow and responsibilities of the {teamRe} fo
 
 The following sections of this article describe:
 
-<<releng-prep>>::
+crossref:freebsd-releng[releng-prep]::
 General information and preparation before starting the release cycle.
 
-<<releng-website>>::
+crossref:freebsd-releng[releng-website]::
 Website Changes During the Release Cycle
 
-<<releng-terms>>::
+crossref:freebsd-releng[releng-terms]::
 Terminology and general information, such as the "code slush" and "code freeze", used throughout this document.
 
-<<releng-head>>::
+crossref:freebsd-releng[releng-head]::
 The Release Engineering process for a "dot-zero" release.
 
-<<releng-stable>>::
+crossref:freebsd-releng[releng-stable]::
 The Release Engineering process for a "point" release.
 
-<<releng-building>>::
+crossref:freebsd-releng[releng-building]::
 Information related to the specific procedures to build installation medium.
 
-<<releng-mirrors>>::
+crossref:freebsd-releng[releng-mirrors]::
 Procedures to publish installation medium.
 
-<<releng-wrapup>>::
+crossref:freebsd-releng[releng-wrapup]::
 Wrapping up the release cycle.
 
 [[releng-prep]]
@@ -361,7 +361,7 @@ FreeBSD `ALPHA` snapshots should be built approximately once a week.
 For the first `ALPHA` build, the `BRANCH` value in [.filename]#sys/conf/newvers.sh# needs to be changed from `CURRENT` to `ALPHA1`.
 For subsequent `ALPHA` builds, increment each `ALPHA__N__` value by one.
 
-See <<releng-building>> for information on building the `ALPHA` images.
+See crossref:freebsd-releng[releng-building] for information on building the `ALPHA` images.
 
 [[releng-head-branching]]
 === Creating the {branchStablex} Branch
@@ -741,7 +741,8 @@ To request an Errata Notice after a release cycle has completed, a developer sho
 The completed Errata Notice template should be emailed together with either a patch against the {branchReleng} branch or a list of revisions from the {branchStable} branch.
 
 For Errata Notice requests immediately following the release, the request should be emailed to both the {teamRe} and the {teamSecteam}.
-Once the {branchReleng} branch has been handed over to the {teamSecteam} as described in <<releng-wrapup-handoff>>, Errata Notice requests should be sent to the {teamSecteam}.
+Once the {branchReleng} branch has been handed over to the {teamSecteam} as
+described in crossref:freebsd-releng[releng-wrapup-handoff], Errata Notice requests should be sent to the {teamSecteam}.
 
 [[releng-wrapup-handoff]]
 === Handoff to the {teamSecteam}
