--- a/documentation/content/en/articles/hubs/_index.adoc
+++ b/documentation/content/en/articles/hubs/_index.adoc
@@ -191,7 +191,7 @@ All of course for various FreeBSD versions, and various architectures.
 
 The best way to mirror the FTP area is rsync.
 You can install the port package:net/rsync[] and then use rsync to sync with your upstream host.
-rsync is already mentioned in <<mirror-serv-rsync>>.
+rsync is already mentioned in crossref:hubs[mirror-serv-rsync].
 Since rsync access is not required, your preferred upstream site may not allow it.
 You may need to hunt around a little bit to find a site that allows rsync access.
 
@@ -308,7 +308,9 @@ Lots of online documentation leads "interactive"users to `ftp.FreeBSD.org` so au
 Additionally there exists a hierarchy of mirrors, which is described in terms of __tiers__.
 The master sites are not referred to but can be described as __Tier-0__.
 Mirrors that mirror from these sites can be considered __Tier-1__, mirrors of __Tier-1__-mirrors, are __Tier-2__, etc.
-Official sites are encouraged to be of a low __tier__, but the lower the tier the higher the requirements in terms as described in <<mirror-requirements>>.
+Official sites are encouraged to be of a low __tier__, but the lower the tier
+the higher the requirements in terms as described in
+crossref:hubs[mirror-requirements].
 Also access to low-tier-mirrors may be restricted, and access to master sites is definitely restricted.
 The __tier__-hierarchy is not reflected by DNS and generally not documented anywhere except for the master sites.
 However, official mirrors with low numbers like 1-4, are usually _Tier-1_ (this is just a rough hint, and there is no rule).
@@ -322,7 +324,8 @@ The short answer is: from the site that is closest to you in Internet terms, or 
 [[mirror-where-simple]]
 ==== I Just Want to Mirror from Somewhere!
 
-If you have no special intentions or requirements, the statement in <<mirror-where-where>> applies.
+If you have no special intentions or requirements, the statement in
+crossref:hubs[mirror-where-where] applies.
 This means:
 
 [.procedure]
@@ -335,9 +338,10 @@ This means:
 [[mirror-where-official]]
 ==== I am an Official Mirror, What is the Right Site for Me?
 
-In general the description in <<mirror-where-simple>> still applies.
+In general the description in crossref:hubs[mirror-where-simple] still applies.
 Of course you may want to put some weight on the fact that your upstream should be of a low tier.
-There are some other considerations about _official_ mirrors that are described in <<mirror-official>>.
+There are some other considerations about _official_ mirrors that are described
+in crossref:hubs[mirror-official].
 
 [[mirror-where-master]]
 ==== I Want to Access the Master Sites!
@@ -359,7 +363,7 @@ There is one master site for the FTP fileset.
 This is the master site for the FTP fileset.
 
 `ftp-master.FreeBSD.org` provides rsync access, in addition to FTP.
-Refer to <<mirror-ftp-rsync>>.
+Refer to crossref:hubs[mirror-ftp-rsync].
 
 Mirrors are also encouraged to allow rsync access for the FTP contents, since they are __Tier-1__-mirrors.
 
