--- a/documentation/content/en/articles/ipsec-must/_index.adoc
+++ b/documentation/content/en/articles/ipsec-must/_index.adoc
@@ -52,8 +52,8 @@ toc::[]
 [[problem]]
 == The Problem
 
-First, lets assume you have <<ipsec-install>>.
-How do you know it is <<caveat>>? Sure, your connection will not work if it is misconfigured, and it will work when you finally get it right.
+First, lets assume you have crossref::ipsec-must[ipsec-install].
+How do you know it is crossref::ipsec-must[caveat]? Sure, your connection will not work if it is misconfigured, and it will work when you finally get it right.
 man:netstat[1] will list it. But can you independently confirm it?
 
 [[solution]]
@@ -73,13 +73,14 @@ This would be true even if some of the data in "encrypted mode" was not encrypte
 
 Ueli Maurer's "Universal Statistical Test for Random Bit Generators"(https://web.archive.org/web/20011115002319/http://www.geocities.com/SiliconValley/Code/4704/universal.pdf[MUST]) quickly measures the entropy of a sample.
 It uses a compression-like algorithm.
-<<code>> for a variant which measures successive (~quarter megabyte) chunks of a file.
+crossref::ipsec-must[code] for a variant which measures successive (~quarter megabyte) chunks of a file.
 
 [[tcpdump]]
 === Tcpdump
 
 We also need a way to capture the raw network data.
-A program called man:tcpdump[1] lets you do this, if you have enabled the _Berkeley Packet Filter_ interface in your <<kernel>>.
+A program called man:tcpdump[1] lets you do this, if you have enabled the
+_Berkeley Packet Filter_ interface in your crossref::ipsec-must[kernel].
 
 The command:
 
@@ -99,9 +100,9 @@ Here is the experiment:
 [.procedure]
 ====
 . Open a window to an IPsec host and another window to an insecure host.
-. Now start <<tcpdump>>.
+. Now start crossref::ipsec-must[tcpdump].
 . In the "secure" window, run the UNIX(R) command man:yes[1], which will stream the `y` character. After a while, stop this. Switch to the insecure window, and repeat. After a while, stop.
-. Now run <<code>> on the captured packets. You should see something like the following. The important thing to note is that the secure connection has 93% (6.7) of the expected value (7.18), and the "normal" connection has 29% (2.1) of the expected value.
+. Now run crossref::ipsec-must[code] on the captured packets. You should see something like the following. The important thing to note is that the secure connection has 93% (6.7) of the expected value (7.18), and the "normal" connection has 29% (2.1) of the expected value.
 +
 [source,shell]
 ....
