--- a/documentation/content/en/books/arch-handbook/smp/_index.adoc
+++ b/documentation/content/en/books/arch-handbook/smp/_index.adoc
@@ -54,7 +54,11 @@ This document presents the current design and implementation of the SMPng Archit
 
 This document is a work-in-progress, and will be updated to reflect on-going design and implementation activities associated with the SMPng Project. Many sections currently exist only in outline form, but will be fleshed out as work proceeds. Updates or suggestions regarding the document may be directed to the document editors.
 
-The goal of SMPng is to allow concurrency in the kernel. The kernel is basically one rather large and complex program. To make the kernel multi-threaded we use some of the same tools used to make other programs multi-threaded. These include mutexes, shared/exclusive locks, semaphores, and condition variables. For the definitions of these and other SMP-related terms, please see the <<smp-glossary>> section of this article.
+The goal of SMPng is to allow concurrency in the kernel. The kernel is basically
+one rather large and complex program. To make the kernel multi-threaded we use
+some of the same tools used to make other programs multi-threaded. These include
+mutexes, shared/exclusive locks, semaphores, and condition variables. For the
+definitions of these and other SMP-related terms, please see the crossref:smp[smp-glossary] section of this article.
 
 [[smp-lock-fundamentals]]
 == Basic Tools and Locking Fundamentals
