--- a/documentation/content/en/books/dev-model/_index.adoc
+++ b/documentation/content/en/books/dev-model/_index.adoc
@@ -80,7 +80,7 @@ Up until now, the FreeBSD project has released a number of described techniques 
 However, a project model summarising how the project is structured is needed because of the increasing amount of project members.
 footnote:[This goes hand-in-hand with Brooks' law that adding another person to a late project will make it later since it will increase the communication needs . A project model is a tool to reduce the communication needs.]
 This paper will provide such a project model and is donated to the FreeBSD Documentation project where it can evolve together with the project so that it can at any point in time reflect the way the project works.
-It is based on [<<thesis, Saers,2003>>].
+It is based on [crossref:dev-model[thesis, Saers,2003]].
 
 I would like to thank the following people for taking the time to explain things that were unclear to me and for proofreading the document.
 
@@ -103,23 +103,23 @@ I would like to thank the following people for taking the time to explain things
 [[overview]]
 == Overview
 A project model is a means to reduce the communications overhead in a project.
-As shown by [<<brooks, Brooks, 1995>>], increasing the number of project participants increases the communication in the project exponentionally.
+As shown by [crossref:dev-model[brooks, Brooks, 1995]], increasing the number of project participants increases the communication in the project exponentionally.
 FreeBSD has during the past few years increased both its mass of active users and committers, and the communication in the project has risen accordingly.
 This project model will serve to reduce this overhead by providing an up-to-date description of the project.
 
 During the Core elections in 2002, Mark Murray stated "I am opposed to a long rule-book, as that satisfies lawyer-tendencies, and is counter to the technocentricity that the project so badly needs."
-[<<bsd-election2002, FreeBSD, 2002B>>].
+[crossref:dev-model[bsd-election2002, FreeBSD, 2002B]].
 This project model is not meant to be a tool to justify creating impositions for developers, but as a tool to facilitate coordination.
 It is meant as a description of the project, with an overview of how the different processes are executed.
 It is an introduction to how the FreeBSD project works.
 
 The FreeBSD project model will be described as of July 1st, 2004.
-It is based on the Niels Jørgensen's paper [<<jorgensen2001, Jørgensen, 2001>>], FreeBSD's official documents, discussions on FreeBSD mailing lists and interviews with developers.
+It is based on the Niels Jørgensen's paper [crossref:dev-model[jorgensen2001, Jørgensen, 2001]], FreeBSD's official documents, discussions on FreeBSD mailing lists and interviews with developers.
 
 After providing definitions of terms used, this document will outline the organisational structure (including role descriptions and communication lines), discuss the methodology model and after presenting the tools used for process control, it will present the defined processes.
 Finally it will outline major sub-projects of the FreeBSD project.
 
-[<<freebsd-developer-handbook, FreeBSD, 2002A>>] Section 1.2 and 1.3 give the vision and the architectural guidelines for the project.
+[crossref:dev-model[freebsd-developer-handbook, FreeBSD, 2002A]] Section 1.2 and 1.3 give the vision and the architectural guidelines for the project.
 The vision is "To produce the best UNIX-like operating system package possible, with due respect to the original software tools ideology as well as usability, performance and stability."
 The architectural guidelines help determine whether a problem that someone wants to be solved is within the scope of the project
 
@@ -129,7 +129,8 @@ The architectural guidelines help determine whether a problem that someone wants
 [[ref-activity]]
 === Activity
 
-An "activity" is an element of work performed during the course of a project [<<ref-pmbok, PMI, 2000>>].
+An "activity" is an element of work performed during the course of a project
+[crossref:dev-model[ref-pmbok, PMI, 2000]].
 It has an output and leads towards an outcome.
 Such an output can either be an input to another activity or a part of the process' delivery.
 
@@ -153,7 +154,9 @@ It is well defined what issues the hat should be contacted about by the project 
 
 An "outcome" is the final output of the process.
 This is synonymous with deliverable, that is defined as "any measurable, tangible, verifiable outcome, result or item that must be produced to complete a project or part of a project.
-Often used more narrowly in reference to an external deliverable, which is a deliverable that is subject to approval by the project sponsor or customer" by [<<ref-pmbok, PMI, 2000>>].
+Often used more narrowly in reference to an external deliverable, which is a
+deliverable that is subject to approval by the project sponsor or customer" by
+[crossref:dev-model[ref-pmbok, PMI, 2000]].
 Examples of outcomes are a piece of software, a decision made or a report written.
 
 [[ref-freebsd]]
@@ -249,9 +252,9 @@ Multiple development efforts in the kernel also require a closer coordination th
 
 The core utilities, known as userland, provide the interface that identifies FreeBSD, both user interface, shared libraries and external interfaces to connecting clients.
 Currently, 162 people are involved in userland development and maintenance, many being maintainers for their own part of the code.
-Maintainership will be discussed in the <<role-maintainer>> section.
+Maintainership will be discussed in the crossref:dev-model[role-maintainer] section.
 
-Documentation is handled by <<sub-project-documentation>> and includes all documents surrounding the FreeBSD project, including the web pages.
+Documentation is handled by crossref:dev-model[sub-project-documentation] and includes all documents surrounding the FreeBSD project, including the web pages.
 There were during 2004 101 people making commits to the FreeBSD Documentation Project.
 
 Ports is the collection of meta-data that is needed to make software packages build correctly on FreeBSD.
@@ -260,7 +263,7 @@ It contains information about where to fetch the source, what patches to apply a
 This allows automated tools to fetch, build and install the package.
 As of this writing, there are more than 12600 ports available.
 footnote:[Statistics are generated by counting the number of entries in the file fetched by portsdb by April 1st, 2005. portsdb is a part of the port sysutils/portupgrade.] , ranging from web servers to games, programming languages and most of the application types that are in use on modern computers.
-Ports will be discussed further in the section <<sub-project-ports>>.
+Ports will be discussed further in the section crossref:dev-model[sub-project-ports].
 
 [[methodology-model]]
 == Methodology model
@@ -305,7 +308,8 @@ Jørgenssen's model for change integration
 |code
 |===
 
-The "development release" is the FreeBSD-CURRENT ("-CURRENT") branch and the "production release" is the FreeBSD-STABLE branch ("-STABLE") [<<jorgensen2001, Jørgensen, 2001>>].
+The "development release" is the FreeBSD-CURRENT ("-CURRENT") branch and the
+"production release" is the FreeBSD-STABLE branch ("-STABLE") [crossref:dev-model[jorgensen2001, Jørgensen, 2001]].
 
 This is a model for one change, and shows that after coding, developers seek community review and try integrating it with their own systems.
 After integrating the change into the development release, called FreeBSD-CURRENT, it is tested by many users and developers in the FreeBSD community.
@@ -397,7 +401,7 @@ image::branches.png[Refer to table below for a screen-reader friendly version.]
 |===
 
 The latest -CURRENT version is always referred to as -CURRENT, while the latest -STABLE release is always referred to as -STABLE.
-In this figure, -STABLE refers to 4-STABLE while -CURRENT refers to 5.0-CURRENT following 5.0-RELEASE. [<<freebsd-releng, FreeBSD, 2002E>>]
+In this figure, -STABLE refers to 4-STABLE while -CURRENT refers to 5.0-CURRENT following 5.0-RELEASE. [crossref:dev-model[freebsd-releng, FreeBSD, 2002E]]
 
 A "major release" is always made from the -CURRENT branch.
 However, the -CURRENT branch does not need to fork at that point in time, but can focus on stabilising.
@@ -455,14 +459,16 @@ These hat descriptions are not such a formalisation, rather a summary of the rol
 [[role-contributor]]
 ==== Contributor
 
-A Contributor contributes to the FreeBSD project either as a developer, as an author, by sending problem reports, or in other ways contributing to the progress of the project. A contributor has no special privileges in the FreeBSD project. [<<freebsd-contributors, FreeBSD, 2002F>>]
+A Contributor contributes to the FreeBSD project either as a developer, as an
+author, by sending problem reports, or in other ways contributing to the
+progress of the project. A contributor has no special privileges in the FreeBSD project. [crossref:dev-model[freebsd-contributors, FreeBSD, 2002F]]
 
 [[role-committer]]
 ==== Committer
 
 A person who has the required privileges to add their code or documentation to the repository.
 A committer has made a commit within the past 12 months.
-[<<freebsd-developer-handbook, FreeBSD, 2000A>>] An active committer is a committer who has made an average of one commit per month during that time.
+[crossref:dev-model[freebsd-developer-handbook, FreeBSD, 2000A]] An active committer is a committer who has made an average of one commit per month during that time.
 
 It is worth noting that there are no technical barriers to prevent someone, once having gained commit privileges to the main- or a sub-project, to make commits in parts of that project's source the committer did not specifically get permission to modify.
 However, when wanting to make modifications to parts a committer has not been involved in before, they should read the logs to see what has happened in this area before, and also read the MAINTAINERS file to see if the maintainer of this part has any special requests on how changes in the code should be made.
@@ -499,7 +505,7 @@ The following list shows the responsibility lines and gives a description of eac
 [[role-doc-manager]]
 ==== Documentation project manager
 
-<<sub-project-documentation>> architect is responsible for defining and following up documentation goals for the committers in the Documentation project, which they supervise.
+crossref:dev-model[sub-project-documentation] architect is responsible for defining and following up documentation goals for the committers in the Documentation project, which they supervise.
 
 Hat held by: The DocEng team mailto:doceng@FreeBSD.org[doceng@FreeBSD.org].
 The https://www.freebsd.org/internal/doceng/[ DocEng Charter].
@@ -523,7 +529,8 @@ The responsibilities of the Release Engineering Team are
 * Coordinating with the Ports and Documentation teams to have an updated set of packages and documentation released with the new releases
 * Coordinating with the Security team so that pending releases are not affected by recently disclosed vulnerabilities.
 
-Further information about the development process is available in the <<process-release-engineering>> section.
+Further information about the development process is available in the
+crossref:dev-model[process-release-engineering] section.
 
 [[role-releng]]
 Hat held by: the Release Engineering team mailto:re@FreeBSD.org[re@FreeBSD.org].
@@ -547,13 +554,17 @@ This hat is currently not occupied.
 The Security Officer's main responsibility is to coordinate information exchange with others in the security community and in the FreeBSD project.
 The Security Officer is also responsible for taking action when security problems are reported and promoting proactive development behavior when it comes to security.
 
-Because of the fear that information about vulnerabilities may leak out to people with malicious intent before a patch is available, only the Security Officer, consisting of an officer, a deputy and two <<role-core>> members, receive sensitive information about security issues.
+Because of the fear that information about vulnerabilities may leak out to
+people with malicious intent before a patch is available, only the Security
+Officer, consisting of an officer, a deputy and two
+crossref:dev-model[role-core] members, receive sensitive information about security issues.
 However, to create or implement a patch, the Security Officer has the Security Officer Team mailto:security-team@FreeBSD.org[security-team@FreeBSD.org] to help do the work.
 
 [[role-repo-manager]]
 ==== Source Repository Manager
 
-The Source Repository Manager is the only one who is allowed to directly modify the repository without using the <<tool-git>> tool.
+The Source Repository Manager is the only one who is allowed to directly modify
+the repository without using the crossref:dev-model[tool-git] tool.
 It is their responsibility to ensure that technical problems that arise in the repository are resolved quickly.
 The source repository manager has the authority to back out commits if this is necessary to resolve a Git technical problem.
 
@@ -562,9 +573,11 @@ Hat held by: the Source Repository Manager mailto:clusteradm@FreeBSD.org[cluster
 [[role-election-manager]]
 ==== Election Manager
 
-The Election Manager is responsible for the <<process-core-election>> process.
+The Election Manager is responsible for the
+crossref:dev-model[process-core-election] process.
 The manager is responsible for running and maintaining the election system, and is the final authority should minor unforeseen events happen in the election process.
-Major unforeseen events have to be discussed with the <<role-core>>
+Major unforeseen events have to be discussed with the
+crossref:dev-model[role-core]
 
 Hat held only during elections.
 
@@ -572,14 +585,15 @@ Hat held only during elections.
 ==== Web site Management
 
 The Web site Management hat is responsible for coordinating the rollout of updated web pages on mirrors around the world, for the overall structure of the primary web site and the system it is running upon.
-The management needs to coordinate the content with <<sub-project-documentation>> and acts as maintainer for the "www" tree.
+The management needs to coordinate the content with
+crossref:dev-model[sub-project-documentation] and acts as maintainer for the "www" tree.
 
 Hat held by: the FreeBSD Webmasters mailto:www@FreeBSD.org[www@FreeBSD.org].
 
 [[role-ports-manager]]
 ==== Ports Manager
 
-The Ports Manager acts as a liaison between <<sub-project-ports>> and the core project, and all requests from the project should go to the ports manager.
+The Ports Manager acts as a liaison between crossref:dev-model[sub-project-ports] and the core project, and all requests from the project should go to the ports manager.
 
 Hat held by: the Ports Management Team mailto:portmgr@FreeBSD.org[portmgr@FreeBSD.org].
 The https://www.freebsd.org/portmgr/charter/[Portmgr charter].
@@ -675,8 +689,12 @@ However, it is frequently this committer that recommends the developer.
 When a contributor is given committer status, they are assigned a mentor.
 The committer who recommended the new committer will, in the general case, take it upon themselves to be the new committers mentor.
 
-When a contributor is given their commit bit, a <<tool-pgp>>-signed email is sent from either <<role-core-secretary>>, <<role-ports-manager>>, or nik@freebsd.org to both admins@freebsd.org, the assigned mentor, the new committer, and core confirming the approval of a new account.
-The mentor then gathers a password line, <<tool-ssh2>> public key, and PGP key from the new committer and sends them to <<role-admin>>.
+When a contributor is given their commit bit, a
+crossref:dev-model[tool-pgp]-signed email is sent from either
+crossref:dev-model[role-core-secretary], crossref:dev-model[role-ports-manager], or nik@freebsd.org to both admins@freebsd.org, the assigned mentor, the new committer, and core confirming the approval of a new account.
+The mentor then gathers a password line, crossref:dev-model[tool-ssh2] public
+key, and PGP key from the new committer and sends them to
+crossref:dev-model[role-admin].
 When the new account is created, the mentor activates the commit bit and guides the new committer through the rest of the initial process.
 
 .Process summary: adding a new committer
@@ -690,9 +708,10 @@ By tradition, this is by adding their name to the committers list.
 
 Recall that a committer is considered to be someone who has committed code during the past 12 months.
 However, it is not until after 18 months of inactivity have passed that commit privileges are eligible to be revoked.
-[<<freebsd-expiration-policy, FreeBSD, 2002H>>]
+[crossref:dev-model[freebsd-expiration-policy, FreeBSD, 2002H]]
 There are, however, no automatic procedures for doing this.
-For reactions concerning commit privileges not triggered by time, see <<process-reactions,section 1.5.8>>.
+For reactions concerning commit privileges not triggered by time, see
+crossref:dev-model[process-reactions,section 1.5.8].
 
 .Process summary: removing a committer
 image::proc-rm-committer.png[Refer to paragraph below for a screen-reader friendly version.]
@@ -705,20 +724,23 @@ In this case, it can also be restored at a later time by core, should the commit
 
 Roles in this process:
 
-. <<role-core>>
-. <<role-contributor>>
-. <<role-committer>>
-. <<role-maintainer>>
-. <<role-mentor>>
+. crossref:dev-model[role-core]
+. crossref:dev-model[role-contributor]
+. crossref:dev-model[role-committer]
+. crossref:dev-model[role-maintainer]
+. crossref:dev-model[role-mentor]
 
-[<<freebsd-bylaws, FreeBSD, 2000A>>] [<<freebsd-expiration-policy, FreeBSD, 2002H>>] [<<freebsd-new-account, FreeBSD, 2002I>>]
+[crossref:dev-model[freebsd-bylaws, FreeBSD, 2000A]]
+[crossref:dev-model[freebsd-expiration-policy, FreeBSD, 2002H]]
+[crossref:dev-model[freebsd-new-account, FreeBSD, 2002I]]
 
 [[committing]]
 === Committing code
 
 The committing of new or modified code is one of the most frequent processes in the FreeBSD project and will usually happen many times a day.
 Committing of code can only be done by a "committer".
-Committers commit either code written by themselves, code submitted to them, or code submitted through a <<model-pr,problem report>>.
+Committers commit either code written by themselves, code submitted to them, or
+code submitted through a crossref:dev-model[model-pr,problem report].
 
 When code is written by the developer that is non-trivial, they should seek a code review from the community.
 This is done by sending mail to the relevant list asking for review.
@@ -726,7 +748,8 @@ Before submitting the code for review, they should ensure it compiles correctly 
 This is called "pre-commit test".
 When contributed code is received, it should be reviewed by the committer and tested the same way.
 
-When a change is committed to a part of the source that has been contributed from an outside <<role-vendor>>, the maintainer should ensure that the patch is contributed back to the vendor.
+When a change is committed to a part of the source that has been contributed
+from an outside crossref:dev-model[role-vendor], the maintainer should ensure that the patch is contributed back to the vendor.
 This is in line with the open source philosophy and makes it easier to stay in sync with outside projects as the patches do not have to be reapplied every time a new release is made.
 
 After the code has been available for review and no further changes are necessary, the code is committed into the development branch, -CURRENT.
@@ -755,12 +778,13 @@ This report is picked up by the maintainer who reviews the code and commits it.
 
 Hats included in this process are:
 
-. <<role-committer>>
-. <<role-contributor>>
-. <<role-vendor>>
-. <<role-reviewer>>
+. crossref:dev-model[role-committer]
+. crossref:dev-model[role-contributor]
+. crossref:dev-model[role-vendor]
+. crossref:dev-model[role-reviewer]
 
-[<<freebsd-committer, FreeBSD, 2001>>] [<<jorgensen2001, Jørgensen, 2001>>]
+[crossref:dev-model[freebsd-committer, FreeBSD, 2001]]
+[crossref:dev-model[jorgensen2001, Jørgensen, 2001]]
 
 [[process-core-election]]
 === Core election
@@ -797,17 +821,20 @@ After the vote is over, the election results are announced and the new core team
 
 Hats in core elections are:
 
-* <<role-core>>
-* <<role-committer>>
-* <<role-election-manager>>
+* crossref:dev-model[role-core]
+* crossref:dev-model[role-committer]
+* crossref:dev-model[role-election-manager]
 
-[<<freebsd-bylaws, FreeBSD, 2000A>>] [<<bsd-election2002, FreeBSD, 2002B>>] [<<freebsd-election, FreeBSD, 2002G>>]
+[crossref:dev-model[freebsd-bylaws, FreeBSD, 2000A]]
+[crossref:dev-model[bsd-election2002, FreeBSD, 2002B]]
+[crossref:dev-model[freebsd-election, FreeBSD, 2002G]]
 
 [[new-features]]
 === Development of new features
 
 Within the project there are sub-projects that are working on new features.
-These projects are generally done by one person [<<jorgensen2001, Jørgensen, 2001>>].
+These projects are generally done by one person
+[crossref:dev-model[jorgensen2001, Jørgensen, 2001]].
 Every project is free to organise development as it sees fit.
 However, when the project is merged to the -CURRENT branch it must follow the project guidelines.
 When the code has been well tested in the -CURRENT branch and deemed stable enough and relevant to the -STABLE branch, it is merged to the -STABLE branch.
@@ -816,7 +843,8 @@ The requirements of the project are given by developer wishes, requests from the
 The wishes that come within the responsibility of a developer are given to that developer who prioritises their time between the request and their wishes.
 A common way to do this is maintain a TODO-list maintained by the project.
 Items that do not come within someone's responsibility are collected on TODO-lists unless someone volunteers to take the responsibility.
-All requests, their distribution and follow-up are handled by the <<tool-bugzilla>> tool.
+All requests, their distribution and follow-up are handled by the
+crossref:dev-model[tool-bugzilla] tool.
 
 Requirements analysis happens in two ways.
 The requests that come in are discussed on mailing lists, both within the main project and in the sub-project that the request belongs to or is spawned by the request.
@@ -843,7 +871,7 @@ footnote:[sendmail and named are examples of code that has been merged from othe
 The maintainer's job is to make sure the code is in sync with the project the code comes from if it is contributed code, and apply patches submitted by the community or write fixes to issues that are discovered.
 
 The main bulk of work that is put into the FreeBSD project is maintenance.
-[<<jorgensen2001, Jørgensen, 2001>>] has made a figure showing the life cycle of changes.
+[crossref:dev-model[jorgensen2001, Jørgensen, 2001]] has made a figure showing the life cycle of changes.
 
 Jørgenssen's model for change integration
 
@@ -900,13 +928,14 @@ Problems include bug reports, feature requests, feature enhancements and notices
 Although `send-pr` is available, users and developers are encouraged to submit issues using our https://bugs.freebsd.org/submit/[ problem report form].
 
 Problem reports are sent to an email address where it is inserted into the Problem Reports maintenance database.
-A <<role-bugbuster>> classifies the problem and sends it to the correct group or maintainer within the project.
+A crossref:dev-model[role-bugbuster] classifies the problem and sends it to the correct group or maintainer within the project.
 After someone has taken responsibility for the report, the report is being analysed.
 This analysis includes verifying the problem and thinking out a solution for the problem.
 Often feedback is required from the report originator or even from the FreeBSD community.
 Once a patch for the problem is made, the originator may be asked to try it out.
 Finally, the working patch is integrated into the project, and documented if applicable.
-It there goes through the regular maintenance cycle as described in section <<model-maintenance>>.
+It there goes through the regular maintenance cycle as described in section
+crossref:dev-model[model-maintenance].
 These are the states a problem report can be in: open, analyzed, feedback, patched, suspended and closed.
 The suspended state is for when further progress is not possible due to the lack of information or for when the task would require so much work that nobody is working on it at the moment.
 
@@ -920,16 +949,17 @@ This patch is then committed and the problem report is closed.
 
 The roles included in this process are:
 
-. <<role-problem-originator>>
-. <<role-maintainer>>
-. <<role-bugbuster>>
+. crossref:dev-model[role-problem-originator]
+. crossref:dev-model[role-maintainer]
+. crossref:dev-model[role-bugbuster]
 
-[<<freebsd-handle-pr, FreeBSD, 2002C>>]. [<<freebsd-send-pr, FreeBSD, 2002D>>]
+[crossref:dev-model[freebsd-handle-pr, FreeBSD, 2002C]].
+[crossref:dev-model[freebsd-send-pr, FreeBSD, 2002D]]
 
 [[process-reactions]]
 === Reacting to misbehavior
 
-[<<freebsd-committer, FreeBSD, 2001>>] has a number of rules that committers should follow.
+[crossref:dev-model[freebsd-committer, FreeBSD, 2001]] has a number of rules that committers should follow.
 However, it happens that these rules are broken.
 The following rules exist in order to be able to react to misbehavior.
 They specify what actions will result in how long a suspension of the committer's commit privileges.
@@ -939,7 +969,7 @@ They specify what actions will result in how long a suspension of the committer'
 * Commit wars - 5 days to all participating parties
 * Impolite or inappropriate behavior - 5 days
 
-[<<ref-freebsd-trenches, Lehey, 2002>>]
+[crossref:dev-model[ref-freebsd-trenches, Lehey, 2002]]
 
 For the suspensions to be efficient, any single core member can implement a suspension before discussing it on the "core" mailing list.
 Repeat offenders can, with a 2/3 vote by core, receive harsher penalties, including permanent removal of commit privileges.
@@ -951,8 +981,8 @@ All penalties come from breaking social etiquette.
 
 Hats involved in this process:
 
-* <<role-core>>
-* <<role-committer>>
+* crossref:dev-model[role-core]
+* crossref:dev-model[role-committer]
 
 [[process-release-engineering]]
 === Release engineering
@@ -982,7 +1012,8 @@ These changes must be approved by the release engineer in advance. At the beginn
 Updates are less likely to be allowed during this period, except for important bug fixes and security updates.
 In this final period, all releases are considered release candidates.
 At the end of the release process, a release is created with the new version number, including binary distributions on web sites and the creation of CD-ROM images.
-However, the release is not considered "really released" until a <<tool-pgp>>-signed message stating exactly that, is sent to the mailing list freebsd-announce; anything labelled as a "release" before that may well be in-process and subject to change before the PGP-signed message is sent. footnote:[Many commercial vendors use these images to create CD-ROMs that are sold in retail outlets.].
+However, the release is not considered "really released" until a
+crossref:dev-model[tool-pgp]-signed message stating exactly that, is sent to the mailing list freebsd-announce; anything labelled as a "release" before that may well be in-process and subject to change before the PGP-signed message is sent. footnote:[Many commercial vendors use these images to create CD-ROMs that are sold in retail outlets.].
 
 The releases of the -CURRENT-branch (that is, all releases that end with ".0") are very similar, but with twice as long timeframe.
 It starts 8 weeks prior to the release with announcement of the release time line.
@@ -993,7 +1024,9 @@ This version is given release candidate status, and as with the release engineer
 However, development on the main development branch can continue.
 Other than these differences, the release engineering processes are alike.
 
-*.0 releases go into their own branch and are aimed mainly at early adopters. The branch then goes through a period of stabilisation, and it is not until the <<role-releng, Release Engineering Team>> decides the demands to stability have been satisfied that the branch becomes -STABLE and -CURRENT targets the next major version. While this for the majority has been with *.1 versions, this is not a demand.
+*.0 releases go into their own branch and are aimed mainly at early adopters.
+The branch then goes through a period of stabilisation, and it is not until the
+crossref:dev-model[role-releng, Release Engineering Team] decides the demands to stability have been satisfied that the branch becomes -STABLE and -CURRENT targets the next major version. While this for the majority has been with *.1 versions, this is not a demand.
 
 Most releases are made when a given date that has been deemed a long enough time since the previous release comes.
 A target is set for having major releases every 18 months and minor releases every 4 months.
@@ -1010,7 +1043,9 @@ For slips of time not to become too long with regards to security and stability 
 . Warn mirrors
 . Publish release
 
-[<<freebsd-releng, FreeBSD, 2002E>>]
+// Keep the spaces around the external square bracket to avoid a warning in the
+// PDF converter
+[ crossref:dev-model[freebsd-releng, FreeBSD, 2002E] ]
 
 [[tools]]
 == Tools
@@ -1039,7 +1074,8 @@ Mailman is a program that automates the management of mailing lists.
 The FreeBSD Project uses it to run 16 general lists, 60 technical lists, 4 limited lists and 5 lists with Git commit logs.
 It is also used for many mailing lists set up and used by other people and projects in the FreeBSD community.
 General lists are lists for the general public, technical lists are mainly for the development of specific areas of interest, and closed lists are for internal communication not intended for the general public.
-The majority of all the communication in the project goes through these 85 lists  [<<ref-bsd-handbook, FreeBSD, 2003A>>, Appendix C].
+The majority of all the communication in the project goes through these 85 lists
+[crossref:dev-model[ref-bsd-handbook, FreeBSD, 2003A], Appendix C].
 
 [[tool-pgp]]
 === Pretty Good Privacy
@@ -1071,13 +1107,13 @@ The amount of ports has grown at a tremendous rate, as shown by the following fi
 .Number of ports added between 1995 and 2022 [[fig-ports]]
 image::portsstatus.svg
 
-<<fig-ports>> shows the number of ports available to FreeBSD in the period 1995 to 2022.
+crossref:dev-model[fig-ports] shows the number of ports available to FreeBSD in the period 1995 to 2022.
 It looks like the curve has first grown exponentially, and then from the middle of 2001 to the middle of 2007 grown linearly at a rate of about 2000 ports/year, before its growth rate gets lower.
 
 As the external software described by the port often is under continued development, the amount of work required to maintain the ports is already large, and increasing.
 This has led to the ports part of the FreeBSD project gaining a more empowered structure, and is more and more becoming a sub-project of the FreeBSD project.
 
-Ports has its own core team with the <<role-ports-manager>> as its leader, and this team can appoint committers without FreeBSD Core's approval.
+Ports has its own core team with the crossref:dev-model[role-ports-manager] as its leader, and this team can appoint committers without FreeBSD Core's approval.
 Unlike in the FreeBSD Project, where a lot of maintenance frequently is rewarded with a commit bit, the ports sub-project contains many active maintainers that are not committers.
 
 Unlike the main project, the ports tree is not branched.
@@ -1104,7 +1140,9 @@ Like the FreeBSD Project, documentation is split in the same branches.
 This is done so that there is always an updated version of the documentation for each version.
 Only documentation errors are corrected in the security branches.
 
-Like the ports sub-project, the Documentation project can appoint documentation committers without FreeBSD Core's approval. [<<freebsd-doceng-charter, FreeBSD, 2003B>>].
+Like the ports sub-project, the Documentation project can appoint documentation
+committers without FreeBSD Core's approval.
+[crossref:dev-model[freebsd-doceng-charter, FreeBSD, 2003B]].
 
 The Documentation project has extref:{fdp-primer}[a primer].
 This is used both to introduce new project members to the standard tools and syntaxes and to act as a reference when working on the project.
