--- a/documentation/content/en/books/developers-handbook/ipv6/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/ipv6/_index.adoc
@@ -78,7 +78,8 @@ We also attended University of New Hampshire IOL tests (http://www.iol.unh.edu/[
 
 ** IPv4 compatible address is not supported.
 ** automatic tunneling (described in 4.3 of this RFC) is not supported.
-** man:gif[4] interface implements IPv[46]-over-IPv[46] tunnel in a generic way, and it covers "configured tunnel" described in the spec. See <<gif,23.5.1.5>> in this document for details.
+** man:gif[4] interface implements IPv[46]-over-IPv[46] tunnel in a generic way,
+   and it covers "configured tunnel" described in the spec. See crossref:ipv6[gif,23.5.1.5] in this document for details.
 
 * RFC1981: Path MTU Discovery for IPv6
 * RFC2080: RIPng for IPv6
@@ -112,15 +113,15 @@ We also attended University of New Hampshire IOL tests (http://www.iol.unh.edu/[
 * RFC2460: IPv6 specification
 * RFC2461: Neighbor discovery for IPv6
 
-** See <<neighbor-discovery,23.5.1.2>> in this document for details.
+** See crossref:ipv6[neighbor-discovery,23.5.1.2] in this document for details.
 
 * RFC2462: IPv6 Stateless Address Autoconfiguration
 
-** See <<ipv6-pnp,23.5.1.4>> in this document for details.
+** See crossref:ipv6[ipv6-pnp,23.5.1.4] in this document for details.
 
 * RFC2463: ICMPv6 for IPv6 specification
 
-** See <<icmpv6,23.5.1.9>> in this document for details.
+** See crossref:ipv6[icmpv6,23.5.1.9] in this document for details.
 
 * RFC2464: Transmission of IPv6 Packets over Ethernet Networks
 * RFC2465: MIB for IPv6: Textual Conventions and General Group
@@ -135,11 +136,12 @@ We also attended University of New Hampshire IOL tests (http://www.iol.unh.edu/[
 * RFC2497: Transmission of IPv6 packet over ARCnet Networks
 * RFC2553: Basic Socket Interface Extensions for IPv6
 
-** IPv4 mapped address (3.7) and special behavior of IPv6 wildcard bind socket (3.8) are supported. See <<ipv6-wildcard-socket,23.5.1.12>> in this document for details.
+** IPv4 mapped address (3.7) and special behavior of IPv6 wildcard bind socket
+   (3.8) are supported. See crossref:ipv6[ipv6-wildcard-socket,23.5.1.12] in this document for details.
 
 * RFC2675: IPv6 Jumbograms
 
-** See <<ipv6-jumbo,23.5.1.7>> in this document for details.
+** See crossref:ipv6[ipv6-jumbo,23.5.1.7] in this document for details.
 
 * RFC2710: Multicast Listener Discovery for IPv6
 * RFC2711: IPv6 router alert option
@@ -153,7 +155,7 @@ We also attended University of New Hampshire IOL tests (http://www.iol.unh.edu/[
 * [.filename]#draft-itojun-ipv6-tcp-to-anycast-00#: Disconnecting TCP connection toward IPv6 anycast address
 * [.filename]#draft-yamamoto-wideipv6-comm-model-00#
 
-** See <<ipv6-sas,23.5.1.6>> in this document for details.
+** See crossref:ipv6[ipv6-sas,23.5.1.6] in this document for details.
 
 * [.filename]#draft-ietf-ipngwg-scopedaddr-format-00.txt#: An Extension of Format for IPv6 Scoped Addresses
 
@@ -312,7 +314,7 @@ RFC2462 has validation rule against incoming RA prefix information option, in 5.
 This is to protect hosts from malicious (or misconfigured) routers that advertise very short prefix lifetime.
 There was an update from Jim Bound to ipngwg mailing list (look for "(ipng 6712)" in the archive) and it is implemented Jim's update.
 
-See <<neighbor-discovery,23.5.1.2>> in the document for relationship between DAD and autoconfiguration.
+See crossref:ipv6[neighbor-discovery,23.5.1.2] in the document for relationship between DAD and autoconfiguration.
 
 [[gif]]
 ==== Generic Tunnel Interface
@@ -331,7 +333,7 @@ It is very easy to configure interfaces and routing tables to perform infinite l
 _Please be warned_.
 
 gif can be configured to be ECN-friendly.
-See <<ipsec-ecn,23.5.4.5>> for ECN-friendliness of tunnels, and man:gif[4] for how to configure.
+See crossref:ipv6[ipsec-ecn,23.5.4.5] for ECN-friendliness of tunnels, and man:gif[4] for how to configure.
 
 If you would like to configure an IPv4-in-IPv6 tunnel with gif interface, read man:gif[4] carefully.
 You will need to remove IPv6 link-local address automatically assigned to the gif interface.
@@ -350,7 +352,8 @@ This is the most typical case.
 . If there is no address that satisfies the above condition, and destination address is site local scope, choose a site local address assigned to one of the interfaces on the sending node.
 . If there is no address that satisfies the above condition, choose the address associated with the routing table entry for the destination. This is the last resort, which may cause scope violation.
 
-For instance, ::1 is selected for ff01::1, fe80:1::200:f8ff:fe01:6317 for fe80:1::2a0:24ff:feab:839b (note that embedded interface index - described in <<ipv6-scope-index,23.5.1.3>> - helps us choose the right source address.
+For instance, ::1 is selected for ff01::1, fe80:1::200:f8ff:fe01:6317 for
+fe80:1::2a0:24ff:feab:839b (note that embedded interface index - described in crossref:ipv6[ipv6-scope-index,23.5.1.3] - helps us choose the right source address.
 Those embedded indices will not be on the wire).
 If the outgoing interface has multiple address for the scope, a source is selected longest match basis (rule 3).
 Suppose 2001:0DB8:808:1:200:f8ff:fe01:6317 and 2001:0DB8:9:124:200:f8ff:fe01:6317 are given to the outgoing interface. 2001:0DB8:808:1:200:f8ff:fe01:6317 is chosen as the source for the destination 2001:0DB8:800::1.
