--- a/documentation/content/en/books/handbook/audit/_index.adoc
+++ b/documentation/content/en/books/handbook/audit/_index.adoc
@@ -126,7 +126,7 @@ Selection expressions are used in a number of places in the audit configuration 
 Expressions contain a list of event classes to match.
 Selection expressions are evaluated from left to right, and two expressions are combined by appending one onto the other.
 
-<<event-selection>> summarizes the default audit event classes:
+crossref:audit[event-selection] summarizes the default audit event classes:
 
 [[event-selection]]
 .Default Audit Event Classes
@@ -220,7 +220,7 @@ Selection expressions are evaluated from left to right, and two expressions are 
 These audit event classes may be customized by modifying the [.filename]#audit_class# and [.filename]#audit_event# configuration files.
 
 Each audit event class may be combined with a prefix indicating whether successful/failed operations are matched, and whether the entry is adding or removing matching for the class and type.
-<<event-prefixes>> summarizes the available prefixes:
+crossref:audit[event-prefixes] summarizes the available prefixes:
 
 [[event-prefixes]]
 .Prefixes for Audit Event Classes
@@ -435,7 +435,9 @@ Adding the following line to [.filename]#/etc/crontab# will schedule this rotati
 
 The change will take effect once [.filename]#/etc/crontab# is saved.
 
-Automatic rotation of the audit trail file based on file size is possible using `filesz` in [.filename]#audit_control# as described in <<audit-auditcontrol>>.
+Automatic rotation of the audit trail file based on file size is possible using
+`filesz` in [.filename]#audit_control# as described in
+crossref:audit[audit-auditcontrol].
 
 As audit trail files can become very large, it is often desirable to compress or otherwise archive trails once they have been closed by the audit daemon.
 The [.filename]#audit_warn# script can be used to perform customized operations for a variety of audit-related events, including the clean termination of audit trails when they are rotated.
