--- a/documentation/content/en/books/handbook/glossary.adoc
+++ b/documentation/content/en/books/handbook/glossary.adoc
@@ -51,37 +51,37 @@ This glossary contains terms and acronyms used within the FreeBSD community and 
 == A
 
 ACL::
-See <<acl-glossary,Access Control List>>.
+See crossref:glossary[acl-glossary,Access Control List].
 
 ACPI::
-See <<acpi-glossary,Advanced Configuration and Power Interface>>.
+See crossref:glossary[acpi-glossary,Advanced Configuration and Power Interface].
 
 AMD::
-See <<amd-glossary,Automatic Mount Daemon>>.
+See crossref:glossary[amd-glossary,Automatic Mount Daemon].
 
 AML::
-See <<aml-glossary,ACPI Machine Language>>.
+See crossref:glossary[aml-glossary,ACPI Machine Language].
 
 API::
-See <<api-glossary,Application Programming Interface>>.
+See crossref:glossary[api-glossary,Application Programming Interface].
 
 APIC::
-See <<apic-glossary,Advanced Programmable Interrupt Controller>>.
+See crossref:glossary[apic-glossary,Advanced Programmable Interrupt Controller].
 
 APM::
-See <<apm-glossary,Advanced Power Management>>.
+See crossref:glossary[apm-glossary,Advanced Power Management].
 
 APOP::
-See <<apop-glossary,Authenticated Post Office Protocol>>.
+See crossref:glossary[apop-glossary,Authenticated Post Office Protocol].
 
 ASL::
-See <<asl-glossary,ACPI Source Language>>.
+See crossref:glossary[asl-glossary,ACPI Source Language].
 
 ATA::
-See <<ata-glossary,Advanced Technology Attachment>>.
+See crossref:glossary[ata-glossary,Advanced Technology Attachment].
 
 ATM::
-See <<atm-glossary,Asynchronous Transfer Mode>>.
+See crossref:glossary[atm-glossary,Asynchronous Transfer Mode].
 
 [[aml-glossary]]
 ACPI Machine Language::
@@ -134,16 +134,16 @@ A daemon that automatically mounts a filesystem when a file or directory within 
 == B
 
 BAR::
-See <<bar-glossary,Base Address Register>>.
+See crossref:glossary[bar-glossary,Base Address Register].
 
 BIND::
-See <<bind-glossary,Berkeley Internet Name Domain>>.
+See crossref:glossary[bind-glossary,Berkeley Internet Name Domain].
 
 BIOS::
-See <<bios-glossary,Basic Input/Output System>>.
+See crossref:glossary[bios-glossary,Basic Input/Output System].
 
 BSD::
-See <<bsd-glossary,Berkeley Software Distribution>>.
+See crossref:glossary[bsd-glossary,Berkeley Software Distribution].
 
 [[bar-glossary]]
 Base Address Register::
@@ -175,22 +175,22 @@ See the extref:{faq}[FAQ, bikeshed-painting] for the origin of the term.
 == C
 
 CD::
-See <<cd-glossary,Carrier Detect>>.
+See crossref:glossary[cd-glossary,Carrier Detect].
 
 CHAP::
-See <<chap-glossary,Challenge Handshake Authentication Protocol>>.
+See crossref:glossary[chap-glossary,Challenge Handshake Authentication Protocol].
 
 CLIP::
-See <<clip-glossary,Classical IP over ATM>>.
+See crossref:glossary[clip-glossary,Classical IP over ATM].
 
 COFF::
-See <<coff-glossary,Common Object File Format>>.
+See crossref:glossary[coff-glossary,Common Object File Format].
 
 CPU::
-See <<cpu-glossary,Central Processing Unit>>.
+See crossref:glossary[cpu-glossary,Central Processing Unit].
 
 CTS::
-See <<cts-glossary,Clear To Send>>.
+See crossref:glossary[cts-glossary,Clear To Send].
 
 [[cd-glossary]]
 Carrier Detect::
@@ -215,7 +215,7 @@ Classical IP over ATM::
 Clear To Send::
 An RS232C signal giving the remote system permission to send data.
 +
-See <<rts-glossary,Also Request To Send>>.
+See crossref:glossary[rts-glossary,Also Request To Send].
 
 [[coff-glossary]]
 Common Object File Format::
@@ -225,31 +225,31 @@ Common Object File Format::
 == D
 
 DAC::
-See <<dac-glossary,Discretionary Access Control>>.
+See crossref:glossary[dac-glossary,Discretionary Access Control].
 
 DDB::
-See <<ddb-glossary,Debugger>>.
+See crossref:glossary[ddb-glossary,Debugger].
 
 DES::
-See <<des-glossary,Data Encryption Standard>>.
+See crossref:glossary[des-glossary,Data Encryption Standard].
 
 DHCP::
-See <<dhcp-glossary,Dynamic Host Configuration Protocol>>.
+See crossref:glossary[dhcp-glossary,Dynamic Host Configuration Protocol].
 
 DNS::
-See <<dns-glossary,Domain Name System>>.
+See crossref:glossary[dns-glossary,Domain Name System].
 
 DSDT::
-See <<dsdt-glossary,Differentiated System Description Table>>.
+See crossref:glossary[dsdt-glossary,Differentiated System Description Table].
 
 DSR::
-See <<dsr-glossary,Data Set Ready>>.
+See crossref:glossary[dsr-glossary,Data Set Ready].
 
 DTR::
-See <<dtr-glossary,Data Terminal Ready>>.
+See crossref:glossary[dtr-glossary,Data Terminal Ready].
 
 DVMRP::
-See <<dvmrp-glossary,Distance-Vector Multicast Routing Protocol>>.
+See crossref:glossary[dvmrp-glossary,Distance-Vector Multicast Routing Protocol].
 
 [[dac-glossary]]
 Discretionary Access Control::
@@ -263,7 +263,7 @@ A method of encrypting information, traditionally used as the method of encrypti
 Data Set Ready::
 An RS232C signal sent from the modem to the computer or terminal indicating a readiness to send and receive data.
 +
-See <<dtr-glossary,Also Data Terminal Ready>>.
+See crossref:glossary[dtr-glossary,Also Data Terminal Ready].
 
 [[dtr-glossary]]
 Data Terminal Ready::
@@ -294,13 +294,13 @@ The address assignment is called a “lease”.
 == E
 
 ECOFF::
-See <<ecoff-glossary,Extended COFF>>.
+See crossref:glossary[ecoff-glossary,Extended COFF].
 
 ELF::
-See <<elf-glossary,Executable and Linking Format>>.
+See crossref:glossary[elf-glossary,Executable and Linking Format].
 
 ESP::
-See <<esp-glossary,Encapsulated Security Payload>>.
+See crossref:glossary[esp-glossary,Encapsulated Security Payload].
 
 Encapsulated Security Payload::
 {empty}
@@ -317,16 +317,16 @@ Extended COFF::
 == F
 
 FADT::
-See <<fadt-glossary,Fixed ACPI Description Table>>.
+See crossref:glossary[fadt-glossary,Fixed ACPI Description Table].
 
 FAT::
-See <<fat-glossary,File Allocation Table>>.
+See crossref:glossary[fat-glossary,File Allocation Table].
 
 FAT16::
-See <<fat16-glossary,File Allocation Table (16-bit)>>.
+See crossref:glossary[fat16-glossary,File Allocation Table (16-bit)].
 
 FTP::
-See <<ftp-glossary,File Transfer Protocol>>.
+See crossref:glossary[ftp-glossary,File Transfer Protocol].
 
 [[fat-glossary]]
 File Allocation Table::
@@ -348,7 +348,7 @@ Fixed ACPI Description Table::
 == G
 
 GUI::
-See <<gui-glossary,Graphical User Interface>>.
+See crossref:glossary[gui-glossary,Graphical User Interface].
 
 [[giant-glossary]]
 Giant::
@@ -364,10 +364,10 @@ A system where the user and computer interact with graphics.
 == H
 
 HTML::
-See <<html-glossary,HyperText Markup Language>>.
+See crossref:glossary[html-glossary,HyperText Markup Language].
 
 HUP::
-See <<hup-glossary,HangUp>>.
+See crossref:glossary[hup-glossary,HangUp].
 
 [[hup-glossary]]
 HangUp::
@@ -381,31 +381,31 @@ The markup language used to create web pages.
 == I
 
 I/O::
-See <<io-glossary,Input/Output>>.
+See crossref:glossary[io-glossary,Input/Output].
 
 IASL::
-See <<iasl-glossary,Intel’s ASL compiler>>.
+See crossref:glossary[iasl-glossary,Intel’s ASL compiler].
 
 IMAP::
-See <<imap-glossary,Internet Message Access Protocol>>.
+See crossref:glossary[imap-glossary,Internet Message Access Protocol].
 
 IP::
-See <<ip-glossary,Internet Protocol>>.
+See crossref:glossary[ip-glossary,Internet Protocol].
 
 IPFW::
-See <<ipfw-glossary,IP Firewall>>.
+See crossref:glossary[ipfw-glossary,IP Firewall].
 
 IPP::
-See <<ipp-glossary,Internet Printing Protocol>>.
+See crossref:glossary[ipp-glossary,Internet Printing Protocol].
 
 IPv4::
-See <<ipv4-glossary,IP Version 4>>.
+See crossref:glossary[ipv4-glossary,IP Version 4].
 
 IPv6::
-See <<ipv6-glossary,IP Version 6>>.
+See crossref:glossary[ipv6-glossary,IP Version 6].
 
 ISP::
-See <<isp-glossary,Internet Service Provider>>.
+See crossref:glossary[isp-glossary,Internet Service Provider].
 
 [[ipfw-glossary]]
 IP Firewall::
@@ -416,7 +416,7 @@ IP Version 4::
 The IP protocol version 4, which uses 32 bits for addressing.
 This version is still the most widely used, but it is slowly being replaced with IPv6.
 +
-See <<ipv6-glossary,Also IP Version 6>>.
+See crossref:glossary[ipv6-glossary,Also IP Version 6].
 
 [[ipv6-glossary]]
 IP Version 6::
@@ -461,19 +461,19 @@ KAME::
 Japanese for “turtle”, the term KAME is used in computing circles to refer to the link:http://www.kame.net/[KAME Project], who work on an implementation of IPv6.
 
 KDC::
-See <<kdc-glossary,Key Distribution Center>>.
+See crossref:glossary[kdc-glossary,Key Distribution Center].
 
 KLD::
-See <<kld-glossary,Kernel ld(1)>>.
+See crossref:glossary[kld-glossary,Kernel ld(1)].
 
 KSE::
-See <<kse-glossary,Kernel Scheduler Entities>>.
+See crossref:glossary[kse-glossary,Kernel Scheduler Entities].
 
 KVA::
-See <<kva-glossary,Kernel Virtual Address>>.
+See crossref:glossary[kva-glossary,Kernel Virtual Address].
 
 Kbps::
-See <<kbps-glossary,Kilo Bits Per Second>>.
+See crossref:glossary[kbps-glossary,Kilo Bits Per Second].
 
 [[kld-glossary]]
 Kernel man:ld[1]::
@@ -501,13 +501,13 @@ Alternates to the Kilo prefix include Mega, Giga, Tera, and so forth.
 == L
 
 LAN::
-See <<lan-glossary,Local Area Network>>.
+See crossref:glossary[lan-glossary,Local Area Network].
 
 LOR::
-See <<lor-glossary,Lock Order Reversal>>.
+See crossref:glossary[lor-glossary,Lock Order Reversal].
 
 LPD::
-See <<lpd-glossary,Line Printer Daemon>>.
+See crossref:glossary[lpd-glossary,Line Printer Daemon].
 
 [[lpd-glossary]]
 Line Printer Daemon::
@@ -530,37 +530,37 @@ True positive LORs tend to get fixed quickly, so check https://lists.FreeBSD.org
 == M
 
 MAC::
-See <<mac-glossary,Mandatory Access Control>>.
+See crossref:glossary[mac-glossary,Mandatory Access Control].
 
 MADT::
-See <<madt-glossary,Multiple APIC Description Table>>.
+See crossref:glossary[madt-glossary,Multiple APIC Description Table].
 
 MFC::
-See <<mfc-glossary,Merge From Current>>.
+See crossref:glossary[mfc-glossary,Merge From Current].
 
 MFH::
-See <<mfh-glossary,Merge From Head>>.
+See crossref:glossary[mfh-glossary,Merge From Head].
 
 MFS::
-See <<mfs-glossary,Merge From Stable>>.
+See crossref:glossary[mfs-glossary,Merge From Stable].
 
 MFV::
-See <<mfv-glossary,Merge From Vendor>>.
+See crossref:glossary[mfv-glossary,Merge From Vendor].
 
 MIT::
-See <<mit-glossary,Massachusetts Institute of Technology>>.
+See crossref:glossary[mit-glossary,Massachusetts Institute of Technology].
 
 MLS::
-See <<mls-glossary,Multi-Level Security>>.
+See crossref:glossary[mls-glossary,Multi-Level Security].
 
 MOTD::
-See <<motd-glossary,Message Of The Day>>.
+See crossref:glossary[motd-glossary,Message Of The Day].
 
 MTA::
-See <<mta-glossary,Mail Transfer Agent>>.
+See crossref:glossary[mta-glossary,Mail Transfer Agent].
 
 MUA::
-See <<mua-glossary,Mail User Agent>>.
+See crossref:glossary[mua-glossary,Mail User Agent].
 
 [[mta-glossary]]
 Mail Transfer Agent::
@@ -595,7 +595,7 @@ On rare occasions, a change will go into -STABLE first and then be merged to -CU
 +
 This term is also used when a patch is merged from -STABLE to a security branch.
 +
-See <<mfc-glossary,Also Merge From Current>>.
+See crossref:glossary[mfc-glossary,Also Merge From Current].
 
 [[mfv-glossary]]
 Merge From Vendor::
@@ -617,19 +617,19 @@ Multiple APIC Description Table::
 == N
 
 NAT::
-See <<nat-glossary,Network Address Translation>>.
+See crossref:glossary[nat-glossary,Network Address Translation].
 
 NDISulator::
-See <<projectevil-glossary,Project Evil>>.
+See crossref:glossary[projectevil-glossary,Project Evil].
 
 NFS::
-See <<nfs-glossary,Network File System>>.
+See crossref:glossary[nfs-glossary,Network File System].
 
 NTFS::
-See <<ntfs-glossary,New Technology File System>>.
+See crossref:glossary[ntfs-glossary,New Technology File System].
 
 NTP::
-See <<ntp-glossary,Network Time Protocol>>.
+See crossref:glossary[ntp-glossary,Network Time Protocol].
 
 [[nat-glossary]]
 Network Address Translation::
@@ -651,13 +651,13 @@ A means of synchronizing clocks over a network.
 == O
 
 OBE::
-See <<obe-glossary,Overtaken By Events>>.
+See crossref:glossary[obe-glossary,Overtaken By Events].
 
 ODMR::
-See <<odmr-glossary,On-Demand Mail Relay>>.
+See crossref:glossary[odmr-glossary,On-Demand Mail Relay].
 
 OS::
-See <<os-glossary,Operating System>>.
+See crossref:glossary[os-glossary,Operating System].
 
 [[odmr-glossary]]
 On-Demand Mail Relay::
@@ -676,46 +676,47 @@ Indicates a suggested change (such as a Problem Report or a feature request) whi
 == P
 
 PAE::
-See <<pae-glossary,Physical Address Extensions>>.
+See crossref:glossary[pae-glossary,Physical Address Extensions].
 
 PAM::
-See <<pam-glossary,Pluggable Authentication Modules>>.
+See crossref:glossary[pam-glossary,Pluggable Authentication Modules].
 
 PAP::
-See <<pap-glossary,Password Authentication Protocol>>.
+See crossref:glossary[pap-glossary,Password Authentication Protocol].
 
 PC::
-See <<pc-glossary,Personal Computer>>.
+See crossref:glossary[pc-glossary,Personal Computer].
 
 PCNSFD::
-See <<pcnfsd-glossary,Personal Computer Network File System Daemon>>.
+See crossref:glossary[pcnfsd-glossary,Personal Computer Network File System
+Daemon].
 
 PDF::
-See <<pdf-glossary,Portable Document Format>>.
+See crossref:glossary[pdf-glossary,Portable Document Format].
 
 PID::
-See <<pid-glossary,Process ID>>.
+See crossref:glossary[pid-glossary,Process ID].
 
 POLA::
-See <<pola-glossary,Principle Of Least Astonishment>>.
+See crossref:glossary[pola-glossary,Principle Of Least Astonishment].
 
 POP::
-See <<pop-glossary,Post Office Protocol>>.
+See crossref:glossary[pop-glossary,Post Office Protocol].
 
 POP3::
-See <<pop3-glossary,Post Office Protocol Version 3>>.
+See crossref:glossary[pop3-glossary,Post Office Protocol Version 3].
 
 PPD::
-See <<ppd-glossary,PostScript Printer Description>>.
+See crossref:glossary[ppd-glossary,PostScript Printer Description].
 
 PPP::
-See <<ppp-glossary,Point-to-Point Protocol>>.
+See crossref:glossary[ppp-glossary,Point-to-Point Protocol].
 
 PPPoA::
-See <<pppoa-glossary,PPP over ATM>>.
+See crossref:glossary[pppoa-glossary,PPP over ATM].
 
 PPPoE::
-See <<pppoe-glossary,PPP over Ethernet>>.
+See crossref:glossary[pppoe-glossary,PPP over Ethernet].
 
 [[pppoa-glossary]]
 PPP over ATM::
@@ -726,10 +727,10 @@ PPP over Ethernet::
 {empty}
 
 PR::
-See <<pr-glossary,Problem Report>>.
+See crossref:glossary[pr-glossary,Problem Report].
 
 PXE::
-See <<pxe-glossary,Preboot eXecution Environment>>.
+See crossref:glossary[pxe-glossary,Preboot eXecution Environment].
 
 [[pap-glossary]]
 Password Authentication Protocol::
@@ -773,7 +774,7 @@ See Also Post Office Protocol Version 3.
 Post Office Protocol Version 3::
 A protocol for accessing email messages on a mail server, characterised by the messages usually being downloaded from the server to the client, as opposed to remaining on the server.
 +
-See <<imap-glossary,Also Internet Message Access Protocol>>.
+See crossref:glossary[imap-glossary,Also Internet Message Access Protocol].
 
 [[ppd-glossary]]
 PostScript Printer Description::
@@ -809,31 +810,31 @@ See [.filename]#src/sys/compat/ndis/subr_ndis.c#.
 == R
 
 RA::
-See <<ra-glossary,Router Advertisement>>.
+See crossref:glossary[ra-glossary,Router Advertisement].
 
 RAID::
-See <<raid-glossary,Redundant Array of Inexpensive Disks>>.
+See crossref:glossary[raid-glossary,Redundant Array of Inexpensive Disks].
 
 RAM::
-See <<ram-glossary,Random Access Memory>>.
+See crossref:glossary[ram-glossary,Random Access Memory].
 
 RD::
-See <<rd-glossary,Received Data>>.
+See crossref:glossary[rd-glossary,Received Data].
 
 RFC::
-See <<rfc-glossary,Request For Comments>>.
+See crossref:glossary[rfc-glossary,Request For Comments].
 
 RISC::
-See <<risc-glossary,Reduced Instruction Set Computer>>.
+See crossref:glossary[risc-glossary,Reduced Instruction Set Computer].
 
 RPC::
-See <<rpc-glossary,Remote Procedure Call>>.
+See crossref:glossary[rpc-glossary,Remote Procedure Call].
 
 RS232C::
-See <<rs232c-glossary,Recommended Standard 232C>>.
+See crossref:glossary[rs232c-glossary,Recommended Standard 232C].
 
 RTS::
-See <<rts-glossary,Request To Send>>.
+See crossref:glossary[rts-glossary,Request To Send].
 
 [[ram-glossary]]
 Random Access Memory::
@@ -846,13 +847,13 @@ It allows the storage, retrieval, archival, logging, identification and merging 
 RCS consists of many small tools that work together.
 It lacks some of the features found in more modern revision control systems, like Git, but it is very simple to install, configure, and start using for a small set of files.
 +
-See <<svn-glossary,Also Subversion>>.
+See crossref:glossary[svn-glossary,Also Subversion].
 
 [[rd-glossary]]
 Received Data::
 An RS232C pin or wire that data is received on.
 +
-See <<td-glossary,Also Transmitted Data>>.
+See crossref:glossary[td-glossary,Also Transmitted Data].
 
 [[rs232c-glossary]]
 Recommended Standard 232C::
@@ -883,7 +884,7 @@ Also used as a general term when someone has a suggested change and wants feedba
 Request To Send::
 An RS232C signal requesting that the remote system commences transmission of data.
 +
-See <<cts-glossary,Also Clear To Send>>.
+See crossref:glossary[cts-glossary,Also Clear To Send].
 
 [[ra-glossary]]
 Router Advertisement::
@@ -893,34 +894,34 @@ Router Advertisement::
 == S
 
 SCI::
-See <<sci-glossary,System Control Interrupt>>.
+See crossref:glossary[sci-glossary,System Control Interrupt].
 
 SCSI::
-See <<scsi-glossary,Small Computer System Interface>>.
+See crossref:glossary[scsi-glossary,Small Computer System Interface].
 
 SG::
-See <<sg-glossary,Signal Ground>>.
+See crossref:glossary[sg-glossary,Signal Ground].
 
 SMB::
-See <<smb-glossary,Server Message Block>>.
+See crossref:glossary[smb-glossary,Server Message Block].
 
 SMP::
-See <<smp-glossary,Symmetric MultiProcessor>>.
+See crossref:glossary[smp-glossary,Symmetric MultiProcessor].
 
 SMTP::
-See <<smtp-glossary,Simple Mail Transfer Protocol>>.
+See crossref:glossary[smtp-glossary,Simple Mail Transfer Protocol].
 
 SMTP AUTH::
-See <<smtpauth-glossary,SMTP Authentication>>.
+See crossref:glossary[smtpauth-glossary,SMTP Authentication].
 
 SSH::
-See <<ssh-glossary,Secure Shell>>.
+See crossref:glossary[ssh-glossary,Secure Shell].
 
 STR::
-See <<str-glossary,Suspend To RAM>>.
+See crossref:glossary[str-glossary,Suspend To RAM].
 
 SVN::
-See <<svn-glossary,Subversion>>.
+See crossref:glossary[svn-glossary,Subversion].
 
 [[smtpauth-glossary]]
 SMTP Authentication::
@@ -966,22 +967,23 @@ System Control Interrupt::
 == T
 
 TCP::
-See <<tcp-glossary,Transmission Control Protocol>>.
+See crossref:glossary[tcp-glossary,Transmission Control Protocol].
 
 TCP/IP::
-See <<tcpip-glossary,Transmission Control Protocol/Internet Protocol>>.
+See crossref:glossary[tcpip-glossary,Transmission Control Protocol/Internet
+Protocol].
 
 TD::
-See <<td-glossary,Transmitted Data>>.
+See crossref:glossary[td-glossary,Transmitted Data].
 
 TFTP::
-See <<tftp-glossary,Trivial FTP>>.
+See crossref:glossary[tftp-glossary,Trivial FTP].
 
 TGT::
-See <<tgt-glossary,Ticket-Granting Ticket>>.
+See crossref:glossary[tgt-glossary,Ticket-Granting Ticket].
 
 TSC::
-See <<tsc-glossary,Time Stamp Counter>>.
+See crossref:glossary[tsc-glossary,Time Stamp Counter].
 
 [[tgt-glossary]]
 Ticket-Granting Ticket::
@@ -1004,7 +1006,7 @@ Much of the Internet runs over TCP/IP.
 Transmitted Data::
 An RS232C pin or wire that data is transmitted on.
 +
-See <<rd-glossary,Also Received Data>>.
+See crossref:glossary[rd-glossary,Also Received Data].
 
 [[tftp-glossary]]
 Trivial FTP::
@@ -1014,22 +1016,22 @@ Trivial FTP::
 == U
 
 UDP::
-See <<udp-glossary,User Datagram Protocol>>.
+See crossref:glossary[udp-glossary,User Datagram Protocol].
 
 UFS1::
-See <<ufs1-glossary,Unix File System Version 1>>.
+See crossref:glossary[ufs1-glossary,Unix File System Version 1].
 
 UFS2::
-See <<ufs2-glossary,Unix File System Version 2>>.
+See crossref:glossary[ufs2-glossary,Unix File System Version 2].
 
 UID::
-See <<uid-glossary,User ID>>.
+See crossref:glossary[uid-glossary,User ID].
 
 URL::
-See <<url-glossary,Uniform Resource Locator>>.
+See crossref:glossary[url-glossary,Uniform Resource Locator].
 
 USB::
-See <<usb-glossary,Universal Serial Bus>>.
+See crossref:glossary[usb-glossary,Universal Serial Bus].
 
 [[url-glossary]]
 Uniform Resource Locator::
@@ -1061,7 +1063,7 @@ UDP does not provide error checking and correction like TCP.
 == V
 
 VPN::
-See <<vpn-glossary,Virtual Private Network>>.
+See crossref:glossary[vpn-glossary,Virtual Private Network].
 
 [[vpn-glossary]]
 Virtual Private Network::
