--- a/documentation/content/en/books/handbook/mail/_index.adoc
+++ b/documentation/content/en/books/handbook/mail/_index.adoc
@@ -80,7 +80,8 @@ The Mail User Agent (MUA) is an application which is used to compose, send, and 
 This application can be a command line program, such as the built-in `mail` utility or a third-party application from the Ports Collection, such as alpine, elm, or mutt.
 Dozens of graphical programs are also available in the Ports Collection, including Claws Mail, Evolution, and Thunderbird.
 Some organizations provide a web mail program which can be accessed through a web browser.
-More information about installing and using a MUA on FreeBSD can be found in <<mail-agents>>.
+More information about installing and using a MUA on FreeBSD can be found in
+crossref:mail[mail-agents].
 
 Mail Transfer Agent (MTA)::
 The Mail Transfer Agent (MTA) is responsible for receiving incoming mail and delivering outgoing mail.
@@ -383,7 +384,7 @@ To install it execute the following command:
 # pkg install dma
 ....
 
-Perform the configuration as indicated in <<configuring-dragonfly-mail-agent>>.
+Perform the configuration as indicated in crossref:mail[configuring-dragonfly-mail-agent].
 
 Then change all the entries in the file [.filename]#/etc/mail/mailer.conf# to man:dma[8]:
 
@@ -843,7 +844,8 @@ Programs such as Sendmail and Postfix are overkill for this use.
 
 Additionally, a typical Internet access service agreement may forbid one from running a "mail server".
 
-The easiest way to fulfill those needs is to use the man:dma[8] MTA included in the <<configuring-dragonfly-mail-agent, base system>>.
+The easiest way to fulfill those needs is to use the man:dma[8] MTA included in
+the crossref:mail[configuring-dragonfly-mail-agent, base system].
 For systems up to 13.2, need be to installed from ports.
 
 In addition to man:dma[8], third-party software can be used to achieve the same, like package:mail/ssmtp[].
@@ -869,7 +871,7 @@ Enter the ISP's outgoing mail relay in place of `mail.example.com`.
 Some ISPs call this the "outgoing mail server" or "SMTP server".
 
 Make sure to disable Sendmail, including the outgoing mail service.
-See <<mail-disable-sendmail>> for details.
+See crossref:mail[mail-disable-sendmail] for details.
 
 package:mail/ssmtp[] has some other options available. Refer to the examples in [.filename]#/usr/local/etc/ssmtp# or the manual page of ssmtp for more information.
 
