--- a/documentation/content/en/books/handbook/printing/_index.adoc
+++ b/documentation/content/en/books/handbook/printing/_index.adoc
@@ -57,7 +57,7 @@ The data must be delivered to the printer, and must be in a form that the printe
 
 Basic printing can be set up quickly.
 The printer must be capable of printing plain `ASCII` text.
-For printing to other types of files, see <<printing-lpd-filters>>.
+For printing to other types of files, see crossref:printing[printing-lpd-filters].
 
 [.procedure]
 ****
@@ -124,7 +124,8 @@ Starting lpd.
 +
 [TIP]
 ====
-If both lines do not start at the left border, but "stairstep" instead, see <<printing-lpd-filters-stairstep>>.
+If both lines do not start at the left border, but "stairstep" instead, see
+crossref:printing[printing-lpd-filters-stairstep].
 ====
 +
 Text files can now be printed with `lpr`.
