--- a/documentation/content/en/books/porters-handbook/new-port/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/new-port/_index.adoc
@@ -50,7 +50,7 @@ endif::[]
 Interested in making a new port, or upgrading existing ports? Great!
 
 What follows are some guidelines for creating a new port for FreeBSD.
-To upgrade an existing port, read this, then read crossref:upgrading[preamble,Upgrading a Port].
+To upgrade an existing port, read this, then read crossref:upgrading[port-upgrading,Upgrading a Port].
 
 When this document is not sufficiently detailed, refer to [.filename]#/usr/ports/Mk/bsd.port.mk#, which is included by all port [.filename]#Makefiles#.
 Even those not hacking [.filename]##Makefile##s daily can gain much knowledge from it.
