--- a/documentation/content/en/books/porters-handbook/order/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/order/_index.adoc
@@ -71,9 +71,11 @@ This block is the most important. It defines the port name, version, distributio
 The variables must be in this order:
 
 * crossref:makefiles[makefile-portname,`PORTNAME`]
-* crossref:makefiles[makefile-versions,`PORTVERSION`][<<portversion-footnote, 1>>]
+*
+crossref:makefiles[makefile-versions,`PORTVERSION`][crossref:order[portversion-footnote, 1]]
 * crossref:makefiles[makefile-versions,`DISTVERSIONPREFIX`]
-* crossref:makefiles[makefile-versions,`DISTVERSION`][<<portversion-footnote, 1>>]
+*
+crossref:makefiles[makefile-versions,`DISTVERSION`][crossref:order[portversion-footnote, 1]]
 * crossref:makefiles[makefile-versions,`DISTVERSIONSUFFIX`]
 * crossref:makefiles[makefile-portrevision,`PORTREVISION`]
 * crossref:makefiles[makefile-portepoch,`PORTEPOCH`]
@@ -151,10 +153,14 @@ This block is optional. The variables are:
 [NOTE]
 ====
 `BROKEN_*` and `IGNORE_*` can be any generic variables, for example, `IGNORE_amd64`, `BROKEN_FreeBSD_10`, etc.
-With the exception of variables that depend on a crossref:uses[uses,`USES`], place those in <<porting-order-uses>>.
-For instance, `IGNORE_WITH_PHP` only works if crossref:uses[xuses-php,`php`] is set, and `BROKEN_SSL` only if crossref:uses[uses-ssl,`ssl`] is set.
+With the exception of variables that depend on a crossref:uses[uses,`USES`],
+place those in crossref:order[porting-order-uses].
+For instance, `IGNORE_WITH_PHP` only works if crossref:uses[uses-php,`php`] is set, and `BROKEN_SSL` only if crossref:uses[uses-ssl,`ssl`] is set.
 
-If the port is marked BROKEN when some conditions are met, and such conditions can only be tested after including [.filename]#bsd.port.options.mk# or [.filename]#bsd.port.pre.mk#, then those variables should be set later, in <<porting-order-rest>>.
+If the port is marked BROKEN when some conditions are met, and such conditions
+can only be tested after including [.filename]#bsd.port.options.mk# or
+[.filename]#bsd.port.pre.mk#, then those variables should be set later, in
+crossref:order[porting-order-rest].
 ====
 
 [[porting-order-depends]]
@@ -213,7 +219,7 @@ Try and sort all of those alphabetically.
 The `FOO` and `BAR` options do not have a standard description, so one need to be written.
 The other options already have one in [.filename]#Mk/bsd.options.desc.mk# so writing one is not needed.
 The `DOCS` and `EXAMPLES` use target helpers to install their files, they are shown here for completeness,
-though they belong in <<porting-order-targets>>, so other variables and targets could be inserted before them.
+though they belong in crossref:order[porting-order-targets], so other variables and targets could be inserted before them.
 
 [.programlisting]
 ....
