--- a/documentation/content/en/books/porters-handbook/upgrading/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/upgrading/_index.adoc
@@ -72,7 +72,7 @@ To create a suitable `diff` for a single patch, copy the file that needs patchin
 % diff -u something.orig something > something.diff
 ....
 
-Otherwise, either use the `git diff` method (<<git-diff>>) or copy the contents of the port to an entire different directory and use the result of the recursive man:diff[1] output of the new and old ports directories (for example, if the modified port directory is called [.filename]#superedit# and the original is in our tree as [.filename]#superedit.bak#, then save the result of `diff -ruN superedit.bak superedit`).
+Otherwise, either use the `git diff` method (crossref:upgrading[git-diff]) or copy the contents of the port to an entire different directory and use the result of the recursive man:diff[1] output of the new and old ports directories (for example, if the modified port directory is called [.filename]#superedit# and the original is in our tree as [.filename]#superedit.bak#, then save the result of `diff -ruN superedit.bak superedit`).
 Either unified or context diff is fine, but port committers generally prefer unified diffs.
 Note the use of the `-N` option-this is the accepted way to force diff to properly deal with the case of new files being added or old files being deleted.
 Before sending us the diff, please examine the output to make sure all the changes make sense.
